--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,28 +1,19 @@
 ---
-title: 七哥谈珍贵的照片（2022-01-07摘录）
+title: 深圳疫情源头甩锅到境外物品？
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844969/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1845099/)
 
-文编：Hima
-听写：叮叮
-视频：七哥
+撰稿：追着曙光跑
 
-七哥有多爱你们啊！所以说我这两天流水的时候，想想你们，想想当时大鼻涕泡儿，擦了两袖子都亮的七哥，我看我自己，你七嫂没看过我那照片，郭美从来没看过，她都没看过。她俩看过触动很大。郭美以为他爹就是小时候什么样的人，她一看她爹那样，吓她一大跳，你七嫂子也吓一大跳。但是你知道给我珍藏我照片的人，珍藏了四十几年呀，然后就这么给我发过来了。他已经身在海外了，在海外几十年收藏了七哥的照片。当年他就相信，七哥是改变天下的人，他没看错，一个东北赵家沟山沟里边儿，在白杨树前边儿，就在我手机里，你知道这照片太珍贵了。
+据深圳特区报1月10日的报道，在深圳市举行疫情防控新闻发布会上，健康委二级巡视员林汉城介绍，综合分析，深圳本次疫情为境外输入引起的本土疫情，暴露于境外新冠病毒污染物品引起感染的可能性大。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-11-at-10.47.56.jpeg)图片来源：网络
+然后网友的评论“可能？这说法能服众？”、“可能？这种问题能用可能吗？”、“意思是物传人?”等等。一个深圳速度检测，结果就把源头甩到了境外物品上，再一次玩弄了一把网民的智商。
 
-校对：HimaFaFA
-发布：HimaBoy
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+如果是物品，是从哪个国家进口的？运输途中花了多长时间？是哪批次的物品？这批物品都有谁接触了？发布会上都没有具体介绍。
 
-**关注我们**
+众所周知，病毒是人传人。如果是物传人的话，病毒没有宿主怎么传到人？何况进口物品在进关的时候都有进行表面消毒。作为权威的新闻发布会上，在没有详实的检验检疫的报告下，推断出疫情源头是“境外新冠病毒污染物品引起感染的可能性大”的结论，那么你们就是一本正经地胡说八道。要么知道这源头就是文贵先生爆料说的“这次疫情不是任何新的病毒，是疫苗”！
 
-Discord 账号
-
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
-
-Gettr 账号
-
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
+参考信息：[深圳疫情源头公布！可能与境外物品有关！](https://c.m.163.com/news/a/GTC9I4S40001899O.html?spss=newsapp)
 
  
 
