--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,15 +1,15 @@
 ---
-title: 七哥谈爆料革命的力量（2022-01-07摘录）
+title: 七哥谈奇迹般的喜联储（2022-01-07摘录）
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844750/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844924/)
 
 文编：Hima
 听写：叮叮
 视频：七哥
 
-来源：郭先生2022-01-07直播09：16：56摘录
+来源：郭先生2022-01-07直播09：28：14摘录
 
-为什么？我再说一遍，共产党这次它不知道，过去的流氓手段在今天的互联网世界不管用了。他没有想到，他想绑架全世界的做法，他成就了人类上再一次，在互联网文明之后，太空文明、新科技、5G、AI、新金融，特别是数字货币。我昨天下午跟咱们的Gettr Pay的某个超级背后的牛人开会，从来上来就没说过好话过，跟我聊没说过好话。这个人一直跟我一个人联系，从来不和任何人联系。这个人绝对是人类上的未来数字货币大佬中的大佬，我就不说那么多。有一天他站出来，绝对震惊世界。他昨天就说句话，他说：“Miles，我必须要给你夸个奖、点十个赞，喜联储、喜币到今天这个价格，他说是你没想到，我也没想到，涨400倍，” 他说：“我也没有想到你们的战友这么牛叉，说锁币就锁币了，说交就交。昨天是6万多个交易额，就是交易额下来了，但是我看到了你这个喜币完全不一样。”他说：“我现在我看到香港的时候、看到大陆的时候，共产党根本不是你的对手。” 他从来不认为我能消灭共产党，从来不会！他说：“Miles，你干啥我都相信。你说你灭掉共产党，我绝对不相信，” 他说：“不是你的能力问题，是根本不可能！这个世界太贪婪，没人敢灭掉共产党。” 这是个人类上巨大的英雄，就像看电影当中，像我这样带着个帽子，最后1分钟儿，一咳嗽，江湖就停止那种大佬。七哥就有这背后的高人，我才一次次敢自信说，你们不了解爆料革命的力量。
+天时、地利、人和，这是为什么王雁平和我跟那个喜联储为战友们争取利益的时候，我们是凭着良心、良知的。这不是开玩笑的，昨天他们去到喜联储去开会，他们看到那个威廉姆还说人眼睛通红，说这个整个人都快累垮了。为什么，就是他面对着我们战友们利益必须排在前边儿。我们战友是投资者，这个投资者这句话谁都会说，许家印也说，谁都会说，但是我们对待投资者这三个字的时候，像信仰一样的像神一样的存在。只有共同的一个集体的行动，捍卫我们每个人的利益，你的今天就是我的明天，你的钱就比我的钱重要，你没这样你不可能创造今天奇迹般的喜联储，你等到今年经济崩塌的时候你会发现，哇塞，我当初的一个干干净净的决定竟然影响了这么大。真的是兄弟姐妹们太伟大了，你们太伟大了。接下来我们让更多的伟大的人加进来，还有更多的伟大的时刻，我现在我们在宣布之前让战友们有更多的币存在。你看这两天想办法打压，哇塞，$37，我以为$35呢，$37了已经，是$37吧，37块钱，我没看错。$37，我可以告诉大家，如果现在场外交易，你去想想能值多少钱。但是如果我们战友的币随便儿买的话，随便卖的话，我告诉你今天喜币值多少钱，3到5块钱，不会超过10块钱，大家不锁币的话，就是10块钱，3到5块钱，甚至比它还低，我可以告诉大家。但就是大家把币锁住了，它这个钱就上去了。现在投资机构给多少钱，它一定给超过这个钱。我们要让整个KYC的水进来以后，我们要有个千亿的盘在那搁着的时候，它就是个万亿的个市场，你们每个人都是那个金手指，每个人呐，七哥要多爱你们呀！
 
 校对：HimaFaFA
 发布：HimaBoy
