--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,34 +1,30 @@
 ---
-title: 中共宣传美式民主崩塌 磨刀霍霍向美国
+title: 七哥说“它不是这个币赢了，是新中国联邦的理念和这个人群赢了” （2022-01-07摘录）
 ---
-`华盛顿DC-Russian` [轉載自GNews](https://gnews.org/zh-hans/1844430/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844902/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/a-18.jpg)reddit.com
-在国会山骚乱一周年之际，中共新华社，新华每日电讯，人民网等中共官方媒体集中发文抨击美国时政，称“国会山骚乱震碎美国滤镜”，“破碎的美式民主幻象震惊世界”，国会山纪念日实为“美国民主崩塌日”。
+文编：Hima
+听写：叮叮
+视频：七哥
 
-新华每日电讯社评称美民主党对骚乱事件的调查进程频频受挫，突显民主、共和两党尖锐对立，美国社会问题和制度缺陷严重，“深陷对立与撕裂深渊”。美国是中共病毒（新冠）感染率和死亡病例数最高的国家。美国政客追逐党派利益，美国反科学的抗疫论调盛行，政治环境恶化，美国民众身处失望和无奈中。
+来源：郭先生2022-01-07直播09：25：34摘录
 
-反观1月7日哈萨克斯坦总统纳扎尔巴耶夫对于国内反政府威行动公开表示授权安全部队可以“无预警开枪”。中共领导人习近平则赞扬哈萨克斯坦的镇压行动是“有力措施”。
+你们一定要小心！大概过去这一星期啊，国内买喜币的人，要进来的人数就新增人数，大概翻了N倍。但很多人就付款特别傻，到中信、到招商、到民生就付钱。结果马上报警，警察来敲门来了。我希望咱今天所有的在看直播的战友们，一定要在国内，特别是国内的战友，一定说你买喜币的方式非常简单：先准备好KFC，先准备好。我今天凌晨的时候，我们在喜联储的战友Kathy给我发信息，战友跟她联系，第一个讨论是什么？怎么能把款汇出去？是吧？就Kathy很感慨，说我们中国人怎么活得这样？是吧？你们一定记住，不要因为买币给自己惹麻烦，是吧？一定想办法在其他安全的方式下汇款，再来买喜币。这是我今天特别要警告大家的，不要给自己惹麻烦，大过年的，特别不好，宁可不买喜币，你也不要因为汇款惹麻烦。第二个，就是全球的农场战友们，如果家旁边人有人买喜币，尽可能帮他安全地付款，千万别让他出问题。第三个我要告诉大家的，喜币，我接着刚才说，喜币的价值就在于我们战友。我告诉昨天那个大师，我说你知道为什么你说喜联储是我们的智慧和设计？不是的，没有一个币，包括比特币，它从第一天开始有这么多的基础的、绝对的支持者，是无私的奉献者。严格讲，它不是这个币赢了，是新中国联邦的理念和这个人群赢了。他感慨太深，他说你们这回锁币的事情 “3年”，是人类上没有一个人相信能做到的。战友们，你们有没有想过，包括就在现场，Rachel在现场，毫不犹豫地她是把币就锁了的，这是一个上海江浙小女人；我们的钟仁，就这么个孩子十七八岁的孩子，毫不犹豫锁了的；雷蒙，猫本就别提了，在那个群里边儿恨不得把币锁上，把家门儿都给锁上，这种动力精神它是任何一个文明伟大之前它必须的条件。就你创造一个奇迹，你需要创造奇迹的人和创造奇迹的钱，更重要的事情，天时、地利、人和。这是为什么王雁平和我跟那个喜联储为战友们争取利益的时候，我们是凭着良心、良知的。这不是开玩笑的，昨天他们到喜联储去开会。
 
-习近平7日向纳扎尔巴耶夫表示慰问称，纳扎尔巴耶夫“在关键时刻果断采取有力举措，迅速平息事态，体现了作为政治家的责任与担当、对国家和人民高度负责的立场。”中共称哈国的民众示威是外国势力蓄意策动的“颜色革命”，剑指美国。中共支持俄罗斯主导的对哈的干预行动，并表示哈国资源丰富，未来的发展会影响中共在中亚的政策。
+校对：HimaFaFA
+发布：HimaBoy
+![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
+欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
 
-有评论指出，习近平赞扬纳扎尔巴耶夫的开枪镇压，让人想起八九六四天安门前对学生的镇压，毫不掩饰独裁者漠视民主与生命的本质。
+**关注我们**
 
-中共不遗余力地对哈国暴力镇压表示赞美，对美国国会山事件则完全双标，利用媒体战略大肆宣称美国民主崩塌，混淆视听唱衰黑化美国。中共用媒体战从抗疫失败、难民危机、党派斗争、种族歧视等角度对美国进行攻击。强化“白人至上”推动种族主义对立，更试图挑拨美国党派斗争，造成内乱让美国自顾不暇。
+Discord 账号
 
-中美之间没有硝烟的战争已经开启。美国会山事件背后是有中共影子的“安提法”暴徒，席卷全球在美国死亡率最高的中共病毒疫情是中共蓄意放毒的生物战争。媒体对言论打压和舆论操控的背后是中共以“蓝金黄”方式对美国媒体，政界，科学界的腐蚀渗透。中共已经把独裁的刀剑砍到西方民主国家的头上，利用病毒及疫苗来击碎各国民主制度，现在更是磨刀霍霍对着“民主灯塔”的美国。
+![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
 
-阿富汗，缅甸及哈萨克斯坦事件背后有着各利益国家的博弈。中美之间，独裁与民主之间的世纪对决仅仅是刚刚开始，这一结果将势必改变现有的世界格局。
+Gettr 账号
 
-参考链接：
-
-[http://world.people.com.cn/n1/2022/0108/c1002-32326937.html](http://world.people.com.cn/n1/2022/0108/c1002-32326937.html)
-
-[https://www.rfa.org/mandarin/yataibaodao/junshiwaijiao/cl-010720220928327.html](https://www.rfa.org/mandarin/yataibaodao/junshiwaijiao/cl-010720220928327.html)
-
-**作者：华盛顿DC 银河**
-
-**编辑发布： 水星**
+![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
