--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,43 +1,43 @@
 ---
-title: 大直播后记&#8211;七哥谈“自己如何做人”
+title: 阿拉巴马州参议员称:新冠病毒是在中共武汉实验室制造的生物武器
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1845120/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1845205/)
 
-- ![图片来源：雅典娜农场技术组](https://assets.gnews.org/wp-content/uploads/2022/01/上-1.png)图片来源：雅典娜农场技术组
+![Firebrand Congressman Mo Brooks, a Trump Ally, Launches U.S. Senate Run |  Top News | US News](https://www.usnews.com/dims4/USNEWS/9b3e41b/2147483647/thumbnail/640x420/quality/85/?url=http%3A%2F%2Fmedia.beam.usnews.com%2F94%2Fcacc4c71ccce88db88a252dbc58ff7%2Ftag%3Areuters.com%2C2021%3Anewsml_LYNXMPEH2M00X%3A12021-03-23T005538Z_1_LYNXMPEH2M00X_RTROPTP_3_USA-CONGRESS-ALABAMA-BROOKS.JPG)资料图：阿拉巴马州代表莫·布鲁克斯（Mo Brooks）参议员
+《布萊巴特新闻网》1月8日报道：阿拉巴马州代表莫·布鲁克斯（Mo Brooks）参议员周六在福克斯新闻频道（FNC：Fox News Channel）的节目中声称，新冠病毒（COVID-19）大流行病是由中共制造的“生物武器”。
+
+阿拉巴马州的美国参议院候选人布鲁克斯告诉FNC的“福克斯新闻直播”(Fox News Live），尽管民主党领导人不愿意讨论这种大流行病，但这将是我们必须要“学会处理”的事情。
+
+“他说: “底线是这样的——人们需要了解这一点: 这是一种生物武器，是在中共武汉生物武器实验室与人民解放军一起制造的。它将会存在很长一段时间，我们必须学会应对。我们不能闭门造车，这是在民主党州长、市长的协助下制定的不幸的政策之一，它对我们的经济造成了很大的损害，在某种程度上说，乔·拜登（Joe Biden）总统也是如此。这样的协助是不管用的。”
+
+FNC的杰奎·海因里希(Jacqui Heinrich)对布鲁克斯的说法提出质疑，并补充说“没有任何证据”证明这是一种“生物武器”。
+
+布鲁克斯坚持认为他看到了证据，并加倍强调了这一说法。
+
+“我已经看到了足够的信息——有些是机密信息，有些不是，有些是与在中共国参与了生物武器的制造项目的人的私人会议后得到的信息，那个人告诉我们正在发生什么。这是一种生物武器。它是人造的，而且是在武汉生物武器实验室制造的。现在，我可以百分之百肯定地说吗？不，但我可以高度、高度、高度自信地说，这就是我的信念。”
+
+简评：
+
+阿拉巴马州参议员候选人莫·布鲁克斯是川普支持的候选人之一。美国中期选举将在今年举行，其对中共病毒的评论“新冠病毒是在中共武汉生物武器实验室制造的生物武器”，既强硬又一语中的，这也代表着民心所向。
+
+查找出中共病毒的的源头和真相是势在必行的，中共是世界的的破坏者，更是美国的威胁，美国民主党和共和党灭共决心是一致的，他们也会联合世界正义的力量一起消灭中共，恢复世界正常秩序。
+
+翻译/简评: JS
+
+PR：clau
+
+新闻链接：[https://www.breitbart.com/clips/2022/01/08/mo-brooks-covid-a-bioweapon-created-in-the-wuhan-bioweapons-lab-of-the-communist-chinese-party/](https://www.breitbart.com/clips/2022/01/08/mo-brooks-covid-a-bioweapon-created-in-the-wuhan-bioweapons-lab-of-the-communist-chinese-party/)
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
-整理：雅典娜速记组
-编辑：小红帽
+编辑：【英国伦敦喜庄园编辑部】
 
-我不想把你老江推向敌人那一面，但是我也不希望你用战友这个身份，把战友们全变成连你智商的亿分之一都不如的人。你觉得我能创造、建设出喜联储，我没有这个情商和智商吗？
-
-就像我们每天在救人，很多战友救完人以后，说：七哥都（靠）你救了我。 告诉战友一句话，如果你觉得都是因为我的话，我就白救你了。送药的不是我，买药的不是我，买药的钱是来自战友捐的钱。
-
-没有新中国联邦，没有爆料革命。你根本不知道郭文贵是谁。
-
-我给你送药，我都不知道往哪送去。如果你真以为郭文贵救了你，你可以说，爆料革命新中国联邦战友们和郭文贵救了你。（这样）我已经觉得，我真的，够不要脸的了。没有你们，我真的 狗屁都不是。昆仑山、喜马拉雅山，你去看一看佛堂、山河。
-
-你看到最核心是什么？ 每个人都很渺小的。大自然的力量是永恒的。
-
-集体的力量形成了山，山之所以广之，所以大之，所以雄伟之，所以包容万物，才成为山和河海之差距；是死的和活的、包容和不包容的差距。 河沟，就是因为太狭窄，不能包容。你没有多大价值。七哥最多是一个小河沟。你不能把我当成大海和山川，我就是那其中的一份子，因为你们，我才显出了我。就像今天老江要卖这个币一样。
-
-你不能把你自己这件事情，凌驾在所有之上。你需要钱，说我要支付律师费。谁不需要钱呢？ 我比你都需要钱，最需要钱的是郭文贵不是你们。我一毛钱都没有。如果我要偷鸡摸狗，我今天可以弄点币，找下基金、找下谁。文耀，能给七哥三万币吗？ 我向你们谁要，你们都（会）给。小飞象、小飞侠肯定给我。佳佳、王子，你要多少，他们给多少。（这是）一定的，那我去卖点币，不让你们知道。我弄个几个亿不是一分钟的事吗？
-
-我比谁都需要钱，但是我知道，我做完（这事）以后，那我不要说死了，我死一亿回，我也无法赎回（这个）罪。（这）早晚（会）被人家知道的。
-
-所以七哥能坐在这儿直播，最根本的原因，（是）我问心无愧，我没有撒任何谎；（没有）不可告人的秘密；（没有）合作过见不得人的事儿。我不用建防火墙，我不用让你们 闭嘴说话。我不能像共产党一样，因为过去做的事，我不想让你知道；我现在想干啥，也不让你知道；我未来要干的事，更不想让你知道。
-
-所以说它（共产党）就开始统一口径。网络，语言全控制。 但是，老江，我为啥在直播中回答你， 像昨天说你花的律师费，我赶快要想办法给报。
-
-资料来源：郭先生GTV和盖特直播视频。
-
-发布：小红帽
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
