--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,22 +1,23 @@
 ---
-title: 所谓“相信科学”
+title: 殡葬服务总监经历14年以来最大因血栓栓塞导致的大量死亡
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1844937/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1845085/)
 
-#### 翻译: Frank
-校对：枳实
-剪辑/字幕：蛮急
+米尔顿×凯恩斯家庭殡葬服务总监：我们看到的是由于心脏病发作、中风、动脉瘤而导致的大量死亡。这些都是肺部和腿部各个部位血栓栓塞的直接结果。目前我今年看到的比过去14 年还多。
 
-传说中的相信“科学”，实际上意味着相信那些不断欺骗我们并不断改变故事的人。
+我叫约翰。我是米尔顿×凯恩斯的葬礼总监。我经营着一家名为米尔顿×凯恩斯家庭殡仪服务的殡仪馆。  在网上快速搜索它，就会找到我并验证我是谁。你们很多人会认识我，我会告诉你我们在哪里的最新消息。
 
-视频来源：[Trust the -science- aka people that constantly lie to us and keep changing the story](https://www.bitchute.com/video/2ZUAs6ugLL75/)
+此时是 2021 年 12 月 6 日，我们看到的是大量的，不自然的大量死亡。由于心脏病发作、中风、动脉瘤，而这些都是血栓栓塞的直接结果。血栓在肺部，腿部各个地方。这导致了这些死亡。这些都被当地的验尸官很好地记录在案。这些在全国都有详细记录。似乎没有人担心他们惊人的增长。
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+你知道我以前很少看到血凝块，现在我今年看到的比过去 14 年还多。让你有个概念，我写信给英格兰的首席验尸官。他不担忧。我好几个星期没有收到回应，然后我收到了他秘书发来的电子邮件说他不感兴趣。看到了吧，这就是应该保护我们免受伤害的人。
+
+所以我们看到了那些死亡，我看到的另一种死亡。这对我个人来说更痛苦的是现在生病的人随着他们的免疫系统最终崩溃，他们可能在六、八个月前接种了新冠疫苗。他们的免疫系统已经被疫苗吞噬了。现在他们正在努力对抗比如感冒。我们在冬季，如您所知，每年的这个时候都有感冒和流感，这些人无法与之对抗。
+
+政府很快将其标记为Omicron新的变种，你知道他们病了，但他们生的是像普通感冒这样的基本疾病。他们的免疫系统被摧毁。如果你从逻辑上考虑它很像，例如癌症患者。当你遇到一个癌症患者，他们正在接受化疗。化疗会摧毁他们的免疫系统。他们必须非常小心的一件事情是因为他们没有了免疫系统，普通感冒或流感可以杀死他们。
+
+这就是我们现在看到的在全国各地的这些接种疫苗者他们病得很重,真的病得很重。
+
+听写/翻译/视频制作+字幕：三分 | 校对： 烟波浩淼 | 编辑FiLa文新心 | 发布：断播
 
  
 
