--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,30 +1,26 @@
 ---
-title: 七哥谈奇迹般的喜联储（2022-01-07摘录）
+title: 大直播后记：共产党恐惧新中国联邦护照
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844924/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1845034/)
 
-文编：Hima
-听写：叮叮
-视频：七哥
+**整理：雅典娜速记组**
+**编辑：文泓**
 
-来源：郭先生2022-01-07直播09：28：14摘录
+![](https://assets.gnews.org/wp-content/uploads/2022/01/希腊.png)图片来源：Gnews
 
-天时、地利、人和，这是为什么王雁平和我跟那个喜联储为战友们争取利益的时候，我们是凭着良心、良知的。这不是开玩笑的，昨天他们去到喜联储去开会，他们看到那个威廉姆还说人眼睛通红，说这个整个人都快累垮了。为什么，就是他面对着我们战友们利益必须排在前边儿。我们战友是投资者，这个投资者这句话谁都会说，许家印也说，谁都会说，但是我们对待投资者这三个字的时候，像信仰一样的像神一样的存在。只有共同的一个集体的行动，捍卫我们每个人的利益，你的今天就是我的明天，你的钱就比我的钱重要，你没这样你不可能创造今天奇迹般的喜联储，你等到今年经济崩塌的时候你会发现，哇塞，我当初的一个干干净净的决定竟然影响了这么大。真的是兄弟姐妹们太伟大了，你们太伟大了。接下来我们让更多的伟大的人加进来，还有更多的伟大的时刻，我现在我们在宣布之前让战友们有更多的币存在。你看这两天想办法打压，哇塞，$37，我以为$35呢，$37了已经，是$37吧，37块钱，我没看错。$37，我可以告诉大家，如果现在场外交易，你去想想能值多少钱。但是如果我们战友的币随便儿买的话，随便卖的话，我告诉你今天喜币值多少钱，3到5块钱，不会超过10块钱，大家不锁币的话，就是10块钱，3到5块钱，甚至比它还低，我可以告诉大家。但就是大家把币锁住了，它这个钱就上去了。现在投资机构给多少钱，它一定给超过这个钱。我们要让整个KYC的水进来以后，我们要有个千亿的盘在那搁着的时候，它就是个万亿的个市场，你们每个人都是那个金手指，每个人呐，七哥要多爱你们呀！
+说起咱们新中联邦护照的问题，我们今天从开始说到现在，你没有几个人理解我的战术。刚刚的杨洁篪、王毅就在24小时以内跟某国外长通话说，听说你们要考虑一个我们非常在意的就是所谓的新中国联邦护照的问题，你们讨论这个问题，那都是我们的敌人，结果这个国家的领导人说一句话，**讨不讨论这个新中国联邦的护照真不是我能决定的。你知道我们这国家，我不是作为个人来讲，你了解我们的体制，我们和你们不一样。**听说杨洁篪、王毅简直是崩溃了。我告诉大家的，今天一定要记住。新中国联邦就在你这个问的过程当中，它本身就在升值，本身就在向我的目标来靠近。当共产党把所有能给我们新中国联邦护照（国家）全打压完以后，就变成了今天冬奥会的结果。2017年，我发推特说，发了几个，吓死一批，把共产党吓死一批。这个词儿，曾经共产党的高人也说过，郭文贵就凭你说这几句话，你就是高人。现在，我已经因为（提出）护照的问题把共产党吓到了，（上天）完全在帮我们、在成就新中国联邦护照。中共没有意识到，它打压所有这些国家说，你不能给新中国联邦护照的时候。这些国家想，你最不想做的事儿，就是我跟你讨价还价的问题，就像原本其他几个小国家想跟我们谈护照呢，现在我们就打开（资料）给他们说，你看看有多少国家（愿意发护照）？
 
-校对：HimaFaFA
-发布：HimaBoy
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+上星期我在直播前，某个国家领导人跟我说，Miles，我们真可以好好严肃坐下来谈谈给你们新中国联邦，一个特种的护照。我理都没理他。因为我知道随着冬奥会的结束以后，共产党会疯狂的报复那些没去的国家，拿了钱没去参加冬奥会。
 
-**关注我们**
+那么，这些国家一定会想办法，他跟共产党没杠杆（讨价还价），他拿什么讨价还价？承认台湾地位。还有一个跟郭文贵见个面，再承认新中国联邦。他这在加10次杠杆还不如新中国联邦护照。所以说，新中国联邦人别着急，你晚一天拿到护照，你的护照会再升级。
 
-Discord 账号
+*发布：  盘古相聚*
 
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
-
-Gettr 账号
-
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
