--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,36 +1,37 @@
 ---
-title: 演员/喜剧演员鲍勃•萨吉特疑似死于中共病毒疫苗
+title: 德约科维奇赢得法庭上诉有望参加澳网
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1844815/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1844957/)
 
-翻譯：香草山翻譯部 – Eleutheria
-![](https://assets.gnews.org/wp-content/uploads/2021/11/image-40-3.png)
-据佛罗里达州警方报道，演员/喜剧演员鲍勃•萨吉特于今天被发现死于酒店，享年65岁。
+#### 澳洲新闻时事动态，尽在雅典娜【澳洲热点】
 
-警方接到酒店报案,称“酒店房中有一名男子不省人事”。现场探查后，橘县警长发推文说“他已经死亡在现场”。而探员也并未在现场发现任何违规或吸毒行为。 鲍勃•萨吉特因出演家庭喜剧Full House而出名。从其推特可看出他对2022年有一整年的演出安排
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/观察.jpeg)图片来源：FirstSportz
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-739.png)
 
-对昨晚的演出感到满意并感谢观众，可排除自杀可能。
+#### 整理报道：小鱼儿
+编辑：文泓
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-741.png)
+据反抗新闻1月10日报道，联邦巡回法院法官安东尼·凯利推翻了联邦政府取消签证的决定，下令立即释放被拘留的网球明星诺瓦克·德约科维奇。
 
-但从更早推文中发现他已于去年11月底接种了中共病毒疫苗的加强针，所以推测死因多半为疫苗副作用导致的突发心脏病或脑血栓引起的猝死。
+法官在听证会上说，取消临时签证的决定是“不合理的”，将被撤销。被告方内政部长将支付诉讼费用，并归还其护照和其他所有个人物品，并敦促德约科维奇的签证申请程序尽快通过，希望他能够参加澳大利亚公开赛并卫冕。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-743.png)
+听证会开始的进程很慢，听证会网上直播多次出现中断。由于德约科维奇案受到国际关注，特别是来自塞尔维亚的关注，因此“公开审理”的要求就更为重要。“如果‘法庭听证会直播’失败，澳洲就是非公开的司法，”汤姆森·盖尔律所的律师贾斯廷·奎尔说。
 
-视屏链接：[https://gtv.org/video/id=61dbb82787664c47acd2d047](https://gtv.org/video/id=61dbb82787664c47acd2d047)
-![This image has an empty alt attribute; its file name is 2c3ff12a-1aad-413c-bcbf-f68f4a054055-2.jpg](https://assets.gnews.org/wp-content/uploads/2022/01/2c3ff12a-1aad-413c-bcbf-f68f4a054055-2.jpg)
-编辑/校对/发稿：Hetangyuese
+在诉讼过程中，凯利法官一度显然和德约科维奇团队一样沮丧，他曾宣称：“这个人(德约科维奇)还能做什么？”
 
-**更多资讯，更多关注**
-[**纽约香草山农场 GTV–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场 GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+已经曝光的是，负责组织签证的澳大利亚网球协会，曾多次要求内政部在他们的球员登上前往澳大利亚的飞机之前，检查他们的一切是否符合规定。该部门官员拒绝了这一要求，为维多利亚州的外交混乱埋下了伏笔。
 
-![This image has an empty alt attribute; its file name is Gnews-Logo-36-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-1.png)
+从法庭上详细的信件来看，就德约科维奇和澳大利亚网球协会而言，文件似乎没有问题。而当德约科维奇的到来被公开后，一场愤怒的舆论风暴占据了维多利亚州的话题，指责州长丹尼尔·安德鲁斯以及体育明星和普通民众之间的健康命令(疫苗接种)不一致。
+
+新闻新闻：[BREAKING: Novak Djokovic WINS court appeal](https://www.rebelnews.com/judge_orders_novak_djokovic_out_of_detention)
+
+发布：文泓
+更多资讯，请关注：**
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
