--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,30 +1,9 @@
 ---
-title: 中共病毒疫苗的主要成分清单
+title: 1/09/2022 文贵直播：中共严控网络让老百姓看不到昆仑山和喜马拉雅山的真相
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1844698/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1844922/)
 
-#### 翻译：Lish
-
-#### 校对：精靈藍
-
-#### 剪辑/字幕：蛮急
-
-这是来自newblog.com网站上的信息。我想只给你读一下这篇文章的第一部分，这些人花了很长时间来分解（疫苗）实际的成分，你知道吗，这些信息被压制了。
-
-2021年8月28日，他们说Robert Young博士发表了他的团队的发现。用相差显微镜，透射和扫描电子显微镜和能量色散X射线光谱分析了四个主要（疫苗）
-
-此研究由Pablo campra博士（西班牙阿尔梅里亚大学）和其它人（Dr. Juan）执行。他们的发现既证实了之前的调查，也扩大了之前的调查。
-
-视频链接：[THE LIST OF MAIN INGREDIENTS OF ALL ”COVID” VACCINES WAS FINALLY EXPOSED](https://www.bitchute.com/video/JcN1Prf7BVGx/)
-
-发布：枳实
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+秘密翻译组-北美组
 
  
 
