--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 1/10/2022 文贵盖特：美欧在停止疫苗上将有重大突破，请战友们照顾好自己和家人的身体
+title: 1/09/2022 文贵直播：毛泽东死后，曾庆红是唯一代表中共去昆仑山祭拜的人
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1845121/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1845236/)
 
 秘密翻译组-北美组
 
