--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,32 +1,34 @@
 ---
-title: 美警告俄在乌克兰问题上必须作出选择
+title: AOC的COVID -19检测呈阳性
 ---
-`华盛顿DC-Russian` [轉載自GNews](https://gnews.org/zh-hans/1844318/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1844868/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/U-1.jpg)cbc.ca
-法兰西24新闻报道，本周就乌克兰危机举行关键会谈之前，俄罗斯方面排除了在乌克兰问题上做出任何让步的可能性。美国国务卿安东尼·布林肯（Antony Blinken）1月9日表示，俄罗斯必须在对话和对抗之间作出选择。
+《纽约邮报》作者帕特里克·赖利(Patrick Reilly)2022 年 1 月 9 日报道摘要
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image002-2.jpg)图片来自网络
+众议员亚历山德拉·奥卡西奥·科尔特斯（ Alexandria Ocasio-Cortez ）的中共病毒检测呈阳性。
 
-布林肯在美国有线电视新闻网（CNN）的《国情》（State of the Union）节目中表示:“我们可以通过对话和外交途径来解决一些分歧，避免冲突。另一条路是对抗，如果俄罗斯继续侵略乌克兰，将会有巨大的后果。”
+来自纽约的国会女议员亚历山德拉·奥卡西奥·科尔特斯的办公室周日表示，她的中共病毒检测呈阳性，目前正在家里康复 。这距离她在佛罗里达被发现不戴口罩参加派对仅一周后。
 
-在布林肯发出警告的几个小时前，俄罗斯副外长谢尔盖·里亚布科夫（Sergei Ryabkov）表示，克里姆林宫对美国和北约欧洲成员国发出的信号感到“失望”，莫斯科寻求与西方达成新的安全安排，以换取俄罗斯从乌克兰边境撤军。
 
-自去年年底以来，俄罗斯在乌克兰边境集结了数万名士兵，并要求北约保证不再进一步向东扩张。克里姆林宫坚持北约绝不允许前苏联的乌克兰成为北约成员国，而乌克兰正在推动加入这个军事联盟。在为期一周的外交活动中，俄罗斯将与北约和欧洲安全与合作组织（OSCE）举行高层会谈，而欧盟未被邀参与。美国试图向欧洲盟友保证，他们不会被边缘化。
 
-在许多欧洲国家越来越担心俄罗斯试图在其边境危机问题上让欧盟边缘化之际，法国欧洲事务部长克莱门特·伯恩（Clement Beaune）1月9日表示，欧盟不应被排除在乌克兰问题谈判之外。法国外交部长警告称，莫斯科试图绕过欧盟，直接与美国就乌克兰问题举行会谈。
+> [pic.twitter.com/woutfVCppZ](https://t.co/woutfVCppZ)
+> — Rep. Alexandria Ocasio-Cortez (@RepAOC) [January 9, 2022](https://twitter.com/RepAOC/status/1480315667802959873?ref_src=twsrc%5Etfw)
 
-去年6月，普京在日内瓦会见了美国总统拜登，并同意两国代表团进行定期“稳定”会谈。拜登在与普京的两次通话中警告称，如果俄罗斯入侵乌克兰，将面临严重后果。正在考虑的措施包括制裁普京的核心集团，取消俄罗斯备受争议的通往德国的北溪2号（Nord Stream 2）管道，或者，在最极端的情况下，切断俄罗斯与世界银行体系的联系。普京的外交政策顾问尤里·乌沙科夫（Yury Ushakov）在与拜登通话后警告称，如果继续实施制裁，美国将犯下“巨大的错误”。
 
-自2014年以来，俄罗斯一直对邻国乌克兰施加巨大压力。与此同时，俄罗斯也在干预白俄罗斯和哈萨克斯坦这些面临民众起义的盟友，莫斯科坚称希望与华盛顿的谈判取得实质性进展。
 
-华盛顿伍德罗·威尔逊国际学者中心（Woodrow Wilson International Center for Scholars）凯南研究所（Kennan Institute）主任马修·罗扬斯基（Matthew Rojansky）表示，日内瓦谈判更多的是为了防止乌克兰危机加速，而不是达成一项重大协议。
+*该声明说**，**“**议员奥卡西奥**·**科尔特斯已收到中共病毒的阳性检测结果。她在家里，出现了症状并正在康复**”*。
 
-参考链接：
+*“**这位国会女议员今年秋天接受了加强针，**并**鼓励每个人都接种加强针并遵守**CDC**的所有指导。**”*
 
-[https://www.france24.com/en/europe/20220109-us-russia-launch-high-stakes-talks-to-avoid-conflict-in-ukraine](https://www.france24.com/en/europe/20220109-us-russia-launch-high-stakes-talks-to-avoid-conflict-in-ukraine)
+然而，这位左翼民主党员的阳性检测结果是在她被发现与男友在迈阿密度假时不戴口罩饮酒的一周多后，当时 omicron 病例在全国飙升。
 
-**作者：华盛顿DC 银河**
+12 月 30 日，这位进步“小队”成员被拍到与男友 莱利·罗伯茨（ Riley Roberts ）坐在 Doraku Izakaya 和 Sushi 餐厅外面，啜饮鸡尾酒并查看手机。
 
-**编辑发布： 水星**
+共和党佛罗里达州州长罗恩·德桑蒂斯 ( Ron DeSantis ) 的支持者在社交媒体上批评 AOC （亚历山德拉·奥卡西奥·科尔特斯）冬季度假不戴口罩。
+
+原文链接：[https://nypost.com/2022/01/09/alexandria-ocasio-cortez-tests-positive-for-covid-19/](https://nypost.com/2022/01/09/alexandria-ocasio-cortez-tests-positive-for-covid-19/)
+
+翻译：JS709｜校对：Nick｜编辑&发布：断播
 
  
 
