--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,49 +1,30 @@
 ---
-title: 引用Graphika将爆料革命等同美国右翼的套路—Vice采访郭文贵先生系列之六
+title: 七哥说共产党的骨灰变成了人类文明的肥料（2022-01-07摘录）
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1843770/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844860/)
 
-整撰：奔跑吧黄小鸭
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-4.png)图片来源：https://graphika.com
-Vice在节目中采用了Graphika的报告称，“郭文贵和他的网络与美国右翼势力紧密联系在一起，表明那些人从相同类型的社交媒体获取信息，他们是在和同一批人打交道，郭文贵的影响力到底如何？已确认1000多个机构和组织有成千上万的关注量，更让人担心的是郭文贵媒体网络成员的倾向性，他们获得了网上广泛传播的信息，并在线下根据这些信息行动，多次造成了发生在现实世界的暴力事件……”
+文编：Hima
+听写：叮叮
+视频：七哥
 
-维基百科上显示Graphika是一家私人情报公司，由约翰-凯利博士（Ph.D. John Kelly）2013年创立，并任职公司首席执行官至今。Graphika自称在分析在线社交网络如何形成、演变和操纵方面是世界上最好的。
+来源：郭先生2022-01-07直播09：19：26摘录
 
-Graphika暂露头角应该是在2020年9月，它的网页上发表了一份关于Peacedata网站的调查报告，报告指出Peacedata网站涉嫌俄罗斯影响美国2020年总统大选。尽管根据该报告显示，该Peacedata网站只有大约5%的英语内容与美国大选有关，但因报告出具”该行动的这一方面表明试图建立左翼受众并将其引离拜登的竞选活动”的结论，Facebook迅速删除了Peacedata网站。
+我真的眼睛这两天把水流的，为什么？我大概从1991年之后，我从来没见过我八弟照片，从来没见过。我这是前天，我的一个老师珍藏了我一个儿时，我大概八岁的时候照的一张照片，八岁或九岁照的照片，是我八弟和我一起照的照片。这个照片当中，当时就是我八、九岁的时候，七哥是处男之前，这是唯一的照片。还有另外一张，是我和我一个发小照的照片，当时我还踩着那个东北的划着脚划子，当年在东北我记得大概在11月、12月的时候，零下35到40度的时候，我站在那儿穿着那个夹克衣裳，擤大鼻涕的那种，锃亮那种。我几十年，四十来年没看过我那时候照片。这两张照片对我感触太深了，就控制不住的流水、眼泪啊。哎呀，我是这几天就想人生啊，真是40几年前，当时我的八弟，还有我当时的样子，和当时的赵家沟。我在同时和着世界上数字货币的大佬、创始人通话，然后谈论灭掉共产党、拯救全人类。你说这人格得多分裂，你还能受得了，是吧？满大鼻涕的郭七儿，当年八、九岁，踩着脚划子，照着这么两张相。然后旁边儿的弟弟已经没了。这位大师跟我说：“为啥我要给你点赞呢？” 他说：“可以告诉你，香港和大陆的房地产，还有香港的股票市场，” 他说：“他们所有的数据我都知道。他从过去的7%到11%的造价，现在已经达到35%，说明他们真完了。” 他说：“在最后，所有数字货币，包括比特币成零的时候，只有喜联储，成为世界最牛的，包括你的Gettr Pay。不是这个数字货币牛，是你重新书写了数字货币的游戏规则。”兄弟姐妹们，共产党的房地产将成就人类上第二次最大的金融形势的存在。他死之前给人类留下了最后一点贡献，把他的骨灰变成了人类文明的肥料，那就是成就了数字货币。“唔该晒啦”，我就说到这儿吧。
 
-**Graphika与斯坦福互联网天文台（SIO）、华盛顿大学知情公众中心（CIP）、大西洋理事会的数字取证研究实验室（DFRLab）一起合作参与2020年选举诚信项目Eipartnership（**[**EIP**](https://www.eipartnership.net/)**）**，这是一项自称是专注于研究社交媒体领域中有关的错误和虚假信息，为联邦政府、国会、州和地方官员以及社交媒体平台等提供和传达数据的紧急集体行动。**根据EIP的说法，因为网上误导性和虚假的主张和叙事融合成”偷来的选举”的说法，推动了2020年1月6日美国国会的暴乱。**
+校对：HimaFaFA
+发布：HimaBoy
+![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
+欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
 
-EIP给出的论点是：2020年大选表明，（美国）国内外行为者仍然致力于将病毒式的虚假和误导性叙事武器化，以破坏对美国选举制度的信心，并侵蚀美国人对我们民主的信心。在整个竞选、选举及其后果中，错误和虚假信息无处不在，并在所有社交平台上传播。
+**关注我们**
 
-**Graphika同时还参与了病毒项目**，该项目的合作联盟最终打算”减轻叙事的影响，否则会破坏公众对疫苗安全性的信心”。它还将”减轻”对那些”反对疫苗接种要求的人”的”政府过度干预”。该项目的资金来自基金会和外部赠款。（该病毒项目的公开信息十分有限）
+Discord 账号
 
-维基百科上引用了一段批评者的文字，**“谁资助Graphika？他们的风险投资是在2014年和2019年私下筹集的，分两期筹集，每批约300万美元。”**
+![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
 
-批评者还指出，目前Graphika的“创新官”是卡米尔·弗朗索瓦（Camille François），她曾在谷歌Google的分析分支Jigsaw工作，辞职后参与了美国参议院情报特别委员会（Us Senate Select Committee on Intelligence）运营一个秘密项目。她与Graphika的约翰-凯利博士并肩作战，他们在2018年12月的报道帮助”证明”了俄罗斯人如何利用Facebook和Twitter等社交媒体网络来影响2016年大选。
+Gettr 账号
 
-此外，**Graphika还与五角大楼的国防高级研究计划局（DARPA）和国防部的密涅瓦计划有联系**。
-
-批评者还说，“他们（Graphika）只是擅长证明俄罗斯的东西，或者因为他们与企业、准政府机构和情报界联系在一起……Graphika工作中缺少的是任何证据，证明对唯一重要的事情有任何实际影响：人们如何投票……”
-
-Vice采用的这份 Graphika报告共 35页，题为“解密郭文贵的网上爆料革命”，报告指出由相互关联的多个媒体实体组成了郭文贵和庞大的网络中心，Graphika认为郭文贵是整个网络的关键人物，是主导者，报告称该网络不仅制造和传播错误和虚假信息，包括在美国的选民欺诈、关于Covid-19的虚假信息以及QAnon的言论。郭文贵还与川普的前战略师史蒂夫·班农联系紧密，并普遍活跃在右翼社交媒体，甚至在网上和线下推动了对中共持不同政见者的骚扰活动，这些活动与多起暴力事件有关。
-
-报告中说，“在2020年6月4日……”新中国联邦 “这一短语在推特上被提及52.8万次”。将影响力量化是Graphika的强项，但报告却用不少的篇幅引用BBC的报道和中共外交部的说法，介绍郭文贵是被中共当局发红通要求遣返的中国流亡富商。并借用《华盛顿邮报》、《华尔街日报》等媒体的一些报道，力证班农与“郭媒体网络”之间的关系。一份采用不具备法律效力的媒体消息作依据的报告，Graphika出具的目的是什么？其衡量的标准又是什么？
-
-**2019年1月27日，中共大外宣CNBC对Graphika的创新官有过一篇报道，卡米尔对记者说，”如果你有一个非常强大的衡量框架，并研究一个协调的、人为的营销活动结构，那就是你可以……识别这些模式。”**可以理解为，Graphika针对调查对象所依据的衡量标准来自自身及其背后的服务对象。
-
-Graphika出具该报告的时间是2021年5月17日，就在同一天，《华盛顿邮报》刊登题为“研究人员表示，与史蒂夫·班农有联系的中国商人是庞大虚假信息网络的推动力”的报道，Dailymail、Mediawell、Election Law Blog等多家媒体也都在当天登出了标题和内容几乎一致的文章。
-
-是到直面邪恶的时候了！在Vice的多次请求下，郭文贵先生同意在5月18日接受采访。2021年9月3日，Graphika发布一份新的报告：“郭文贵借用反疫苗战术推广新 “神药”——青蒿素“。（未完待续）
-
-参考链接：
-
-[Graphika](https://wikispooks.com/wiki/Graphika)
-
-[The Long Fuse: Misinformation and the 2020 Election.](https://www.eipartnership.net/)
-
-[This former Google exec talked to the social media trolls the Russians paid to influence elections — here’s what she learned](https://www.cnbc.com/2019/01/27/ex-google-exec-camille-francois-russian-trolls.html)
-
-发布：Shifter
+![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
