--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,42 +1,30 @@
 ---
-title: 简·鲁比博士：大药厂故意部署有毒批次的新冠疫苗
+title: 七哥谈爆料革命的力量（2022-01-07摘录）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1843468/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844750/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+文编：Hima
+听写：叮叮
+视频：七哥
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-17.jpg)
+来源：郭先生2022-01-07直播09：16：56摘录
 
+为什么？我再说一遍，共产党这次它不知道，过去的流氓手段在今天的互联网世界不管用了。他没有想到，他想绑架全世界的做法，他成就了人类上再一次，在互联网文明之后，太空文明、新科技、5G、AI、新金融，特别是数字货币。我昨天下午跟咱们的Gettr Pay的某个超级背后的牛人开会，从来上来就没说过好话过，跟我聊没说过好话。这个人一直跟我一个人联系，从来不和任何人联系。这个人绝对是人类上的未来数字货币大佬中的大佬，我就不说那么多。有一天他站出来，绝对震惊世界。他昨天就说句话，他说：“Miles，我必须要给你夸个奖、点十个赞，喜联储、喜币到今天这个价格，他说是你没想到，我也没想到，涨400倍，” 他说：“我也没有想到你们的战友这么牛叉，说锁币就锁币了，说交就交。昨天是6万多个交易额，就是交易额下来了，但是我看到了你这个喜币完全不一样。”他说：“我现在我看到香港的时候、看到大陆的时候，共产党根本不是你的对手。” 他从来不认为我能消灭共产党，从来不会！他说：“Miles，你干啥我都相信。你说你灭掉共产党，我绝对不相信，” 他说：“不是你的能力问题，是根本不可能！这个世界太贪婪，没人敢灭掉共产党。” 这是个人类上巨大的英雄，就像看电影当中，像我这样带着个帽子，最后1分钟儿，一咳嗽，江湖就停止那种大佬。七哥就有这背后的高人，我才一次次敢自信说，你们不了解爆料革命的力量。
 
- 
-图片来源：Global Possibilities
+校对：HimaFaFA
+发布：HimaBoy
+![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
+欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
 
+**关注我们**
 
-整理报道：小鱼儿
-编辑：小鱼儿/小红帽
+Discord 账号
 
-据自然新闻(Natural News)1月9日报道，简·鲁比（Jane Ruby）博士告诉公众，大药厂如辉瑞公司（ Pfizer）、摩德纳公司（Moderna）和强生公司（Johnson & Johnson）正在部署有毒批次的新冠病毒(COVID-19)疫苗。
+![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
 
-鲁比在1月3日的斯图·彼得斯秀节目(The Stew Peters Show)中说，“有证据表明，这些公司故意部署有毒批次的（新冠病毒疫苗）。”她说，分析家们通过批号确定了有毒的批次，现在是向全世界人民传递信息的紧急时刻。
+Gettr 账号
 
-“他们所做的是，确定测试一半人口的致死量。这是进入人体研究之前，评估急性毒性的手段之一，”鲁比说。“这是在人们不知情和没有同意的情况下进行的。这违反了所有道德和监管规则。这些公司只是在肆无忌惮地进行，因为没有任何东西可以阻止他们。”
-
-鲁比分析，对于摩德纳来说，它是批次代码011 l 20。数字011是时间上的批次顺序，代表已经被开发了一段时间，并由公司部署。“ l ”是浓度，决定了它的毒性和不良反应的数量。数字20是定性的，这种成分在其批次中被认为是高毒性的。
-
-设法进入辉瑞和摩德纳系统的专业黑客能够验证这些批次，并有足够的证据列出迄今为止部署的所有摩德纳批次。
-
-黑客发现，这些公司在部署疫苗的地点和发放的剂量方面都非常具体。摩德纳来公司一直在美国分发致命的剂量，并在欧盟出口 “残疾”剂量。因此，与欧盟相比，美国的死亡率高出10倍。但与美国相比，欧盟的不良反应和残疾病例要高出10倍。
-
-参考新闻：[Dr. Jane Ruby: Big Pharma companies intentionally deploying toxic batches of COVID-19 vaccine – Brighteon.TV](https://www.naturalnews.com/2022-01-09-big-pharma-deploys-toxic-batches-covid-vaccine.html)
-
-发布：小红帽
-
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
