--- a/gnews/44.md
+++ b/gnews/44.md
@@ -1,24 +1,24 @@
 ---
-title: 天机预示中共必灭
+title: 疫情汹涌导致美500万岗位人手奇缺
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1842558/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1842564/)
 
-作者：银河勇气星 – 骄子
+作者：纽约香草山文艺部 – 宁文静
 ![](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-1月7日，郭文贵先生在大直播中透露，灭共是早有天机预示的。
+1月7日，经济学家安德鲁·亨特说，未来几天将有超过500万美国人因感染中共病毒被困在家里隔离，导致基础服务行业的人手奇缺，对经济造成重大冲击。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture27-5.jpg)
+据悉，美国继1月3日单日突破100万确诊病例之后，1月7日又新增了90万个病例。此轮奥密克戎来势汹汹，但更令人担心的是疫情导致的隔离人数越来越多，致使500万关键岗位缺员，涉及市政、安保、教育、交通等部门。例如，新年交接，每天都有超过1000个航班被取消；纽约市的垃圾清运及地铁服务被严重延迟；洛杉矶有800名警察和消防员的人员缺口，导致出警及消防车响应时间拉长；夏威夷正努力填补1600名教工的空缺……
 
-中共的南普陀计划本打算利用习近平做傀儡。但如今，习近平独揽大权，坐稳习家天下，毫无疑问南普陀计划已经失败。中共南普陀计划真正的发起人是曾庆红。习曾之间必然会爆发生死之战。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture27-2.jpg)
-郭先生还爆料，当年为给盘古做奠基石，曾经在南普陀山取土，当时发生了不可思议的事。后经多位宗教大师指点得知，南普陀之地所定乾坤之事一定会被颠覆。在南普陀会议上，中共在风水大阵的重要地点——河南嵩山——广施道法。不料施法后，嵩山的白鹤从天坠落而亡。种种征兆预示，中共南普陀会议很难顺利。
+亨特警告说，基础岗位人员奇缺，这是对已经被大流行病、供应链堵塞、价格上涨搞得疲惫不堪的公共和私营部门的更大压力。它可能在未来的一两个月对经济造成持续的打击。
 
-郭先生从一系列事件中，伺得天机，坚信他一定能灭共。而且，习近平的生辰八字也预示着，他会在二十大后，与中共一同走向覆灭。这一切都是天意。
-
-参考链接：[天机预示中共必灭](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
+参考链接：
+1. [疫情汹涌导致美500万岗位人手奇缺](https://www.wsj.com/articles/omicron-and-the-week-america-is-calling-in-sick-11641571925?mod=hp_lead_pos2)
+2. [疫情汹涌导致美500万岗位人手奇缺](https://mp.weixin.qq.com/s/wdfj0-33VO1iL4MSATPqNQ)
 
 ![This image has an empty alt attribute; its file name is F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
 
-总编：文真
-编辑：文真
+总编：文特
+编辑：文特
 校对/发稿：Hetangyuese
 
 **更多资讯，更多关注**
