--- a/gnews/45.md
+++ b/gnews/45.md
@@ -1,24 +1,24 @@
 ---
-title: 新中国联邦护照是灭共战略 令中共恐惧至极
+title: 法国数万人冒雨反疫苗限制令游行
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1842557/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1842563/)
 
-作者：银河勇气星 – 骄子
+作者：纽约香草山 – 侠肝义胆
 ![](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-1月7日，郭文贵先生在大直播中分享， 新中国联邦护照是承诺和信念，更是灭共的战术，会加速中共的灭亡。
+1月8日，在法国首都巴黎，数万法国人不顾倾盆大雨，愤怒地走上街头，反对马克龙政府为应对未接种疫苗而实施的最新限制令。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture27-4.jpg)
+抗议者们在整个巴黎喊出“自由”的口号以及对自由的诉求：人民有选择是否接种疫苗的自由。强烈要求未接种中共病毒疫苗者不应受到惩罚和歧视。
 
-郭先生爆料，中共王毅和杨洁篪与某国外长通话，讨论该国元首出席北京冬奥会，以及新中国联邦护照的问题，并威胁说，与新中国联邦合作是与中共为敌。最终，该国元首并未表态继续支持中共。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture27-1.jpg)
-郭先生说，中共会在冬奥会后，疯狂地报复和打压那些拒绝出席冬奥会的国家，但是这些疯狂举动会迫使越来越多的国家寻求与新中国联邦合作，成为抵制中共霸凌行为的“杠杆”。 新中国联邦的护照是对中共的致命深层打击，仅仅谈论这件事就已经让中共深陷恐惧。
+随后巴黎的抗议场景被复制到法国各地的城镇。法国人民反对政府关于中共病毒疫苗疫苗的立法限制措施的情绪越来越强烈。
 
-最后，郭先生说，新中国联邦护照会在中共覆灭之时继续升值，最终一定会兑现。
+有关人士评论，此次游行抗议表明法国人民逐渐从中共病毒和疫苗灾难中觉醒过来。
 
-参考链接：[新中国联邦护照是灭共战略 令中共恐惧至极](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
+参考链接：[法国数万人冒雨反疫苗限制令游行](https://news.sky.com/story/covid-19-tens-of-thousands-protest-in-france-over-emmanuel-macrons-planned-coronavirus-restrictions-12512072)
 
 ![This image has an empty alt attribute; its file name is F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
 
-总编：文真
-编辑：文真
+总编：飞虹
+编辑：文特
 校对/发稿：Hetangyuese
 
 **更多资讯，更多关注**
