--- a/gnews/46.md
+++ b/gnews/46.md
@@ -1,40 +1,32 @@
 ---
-title: 斯坦福大学教授游说司法部停止打击中共的渗透活动
+title: 日本放弃疫苗强制 明确接种必须“知情同意”
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1842485/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1842559/)
 
-翻譯：香草山翻譯部 – Eleutheria
-![](https://assets.gnews.org/wp-content/uploads/2021/11/image-40-3.png)
-据国家脉动报道，有近200名教授签署了一封联名信，要求乔-拜登的司法部终止川普时代针对与中共有联系的学者利用美国大学进行知识产权盗窃和间谍活动的举措。
+作者：纽约香草山文艺部 – 宁文静
+![](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+1月7日，日本卫生部放弃了强制疫苗接种的规定，并将心肌炎警告贴在疫苗标签上，明确接种必须“知情同意”，同时禁止歧视拒绝接种疫苗的人士。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture27-3.jpg)
+首先，日本卫生部将两种mRNA疫苗对年轻男性造成心肌和心包炎症列为可能产生的严重副作用，并要求医院详细报告接种疫苗后28天内出现的不良事件；其次，强调知情同意和身体自主权。必须在提供必要信息之后，得到许可才能接种；最后，禁止歧视那些拒绝接种实验性mRNA疫苗的人士，并设立“人权”网页，处理相关投诉。
 
-这177名教授来自斯坦福大学，拜登的司法部民权司首席副助理检察长帕梅拉-卡兰正在该校休假，担任教授。卡兰曾在时任总统唐纳德-川普的第一次弹劾中作证，她带头参与拜登白宫的反选举审计工作。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture1-31.jpg)
-卡兰的大学现在正在游说司法部废除 “中国倡议”，这是川普的司法部为打击中共进行的间谍活动、渗透和知识产权盗窃活动而启动的。
+与有些国家正实行欺骗、胁迫的强制疫苗政策不同，日本卫生部门正采取一种明智的、合乎道德的做法，它将决定的权利交给接受者个人，或者由父母履行对未成年人的监护责任。
 
-“我们，来自40多个系的177名斯坦福大学教师，向美国司法部长梅里克-B-加兰发出以下公开信，要求他终止司法部的中国倡议。中国倡议是由当时的司法部长杰夫-塞申斯在2018年提出的，目的是打击经济间谍活动、知识产权盗窃和其他与中国政府有关的威胁，”该小组开始说。
+参考链接：[日本放弃疫苗强制 明确接种必须“知情同意”](https://brisbanenationalreview.com/health/japan-drops-all-vaxxine-mandates-places-myocarditis-warning-on-label/?fbclid=IwAR1QGEx0AFSE8W8EKdSr4M6GUWCusXBnLhhz5xt3BHfjM24Xlq6kaQq0zo4)
 
-“我们许多最具挑战性的全球问题，包括气候变化和可持续性以及当前和未来的大流行病，需要国际参与。如果没有一个开放和包容的环境来吸引所有领域的优秀人才，美国就无法保持其在科学和技术领域的世界领先地位。”该信在结论中补充道。
+![This image has an empty alt attribute; its file name is F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
 
-信中的签名者包括李菲菲，她是斯坦福大学教授，也是与中共政府有联系的推特公司的顾问。
-
-她参加了几个中共支持的会议，并经常与 “清华大学的一个领先的人工智能研究机构合作，清华大学是一个著名的中共学术机构，也为中共军队进行人工智能研究。”
-
-中共在西方教育领域的渗透之深，学校的腐败可见一斑。为了得到中共的捐款，这些大学及教授昧着良心以种种理由替中共开脱，便利其盗取知识产权。我们有必要将这些中共的海外触手连同中共一并拔除。
-
-参考来源：[斯坦福大学教授游说司法部停止打击中共的渗透活动](https://thenationalpulse.com/2021/01/09/pamela-karlans-school-loobying-doj-to-stop-china-initiative-2/)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2c3ff12a-1aad-413c-bcbf-f68f4a054055-2.jpg)
-
-编辑/校对/发稿：Hetangyuese
+总编：文特
+编辑：文特
+校对/发稿：Hetangyuese
 
 **更多资讯，更多关注**
-[**纽约香草山农场 GTV–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场 GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 [**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 [**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-1.png)
+![This image has an empty alt attribute; its file name is MOS_LOGO_publish-14.png](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
 
  
 
