--- a/gnews/47.md
+++ b/gnews/47.md
@@ -1,50 +1,34 @@
 ---
-title: 爆炸新闻：德国病理学家在中共病毒 &#8220;疫苗 &#8220;中发现 &#8220;惊人的 &#8220;杂质
+title: 天机预示中共必灭
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1842484/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1842558/)
 
-翻譯：香草山翻譯部 – Eleutheria
-![](https://assets.gnews.org/wp-content/uploads/2021/11/image-40-3.png)
-据美国RAIR基金会报道，一组德国病理学家加入专家的行列，在中共病毒疫苗和接种者的血液中发现异物。
+作者：银河勇气星 – 骄子
+![](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+1月7日，郭文贵先生在大直播中透露，灭共是早有天机预示的。
 
-德国病理学家在9月的一次令人震惊的新闻发布会上介绍了对冠状病毒 “疫苗 “的分析。该会议的一个片段被专门翻译给美国RAIR基金会，揭示了疫苗中的异物，以及注射过疫苗的人的血液中的异物。
+中共的南普陀计划本打算利用习近平做傀儡。但如今，习近平独揽大权，坐稳习家天下，毫无疑问南普陀计划已经失败。中共南普陀计划真正的发起人是曾庆红。习曾之间必然会爆发生死之战。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture27-2.jpg)
+郭先生还爆料，当年为给盘古做奠基石，曾经在南普陀山取土，当时发生了不可思议的事。后经多位宗教大师指点得知，南普陀之地所定乾坤之事一定会被颠覆。在南普陀会议上，中共在风水大阵的重要地点——河南嵩山——广施道法。不料施法后，嵩山的白鹤从天坠落而亡。种种征兆预示，中共南普陀会议很难顺利。
 
-其中一些异物被描述为 “精确的构造”，还有–令人震惊的–从虫卵中孵化出来的蠕虫。
+郭先生从一系列事件中，伺得天机，坚信他一定能灭共。而且，习近平的生辰八字也预示着，他会在二十大后，与中共一同走向覆灭。这一切都是天意。
 
-阿纳-布克哈特教授博士现场直播的新闻发布会是由Stiftung Corona-Ausschuss组织的，可以粗略地描述为德国相当于美国的前线医生。不出所料，他们出色的演讲受到了德国传统媒体的抨击。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture2-6.jpg)
-这次活动由Arne Burkhardt教授和Walter Lang博士带头，Arne Burkhardt教授曾担任 “Reutlingen病理研究所所长18年，然后在私人诊所担任病理学家”，Walter Lang博士 “1968年至1985年在汉诺威医学院担任病理学家”，然后在汉诺威创建了一个私人病理研究所，Werner Birkholz教授曾是不来梅雅各布大学的电气工程教授，主要研究质量和风险管理。Ute Langer博士是一位医生，也是一位外科医生，他做了介绍和发言。
+参考链接：[天机预示中共必灭](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
 
-尽管看起来令人难以置信，但德国医生并不是唯一在疫苗中发现异物的人
+![This image has an empty alt attribute; its file name is F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
 
-- 8月，日本在其中共病毒疫苗中发现异物后，暂停了Moderna疫苗。据日经亚洲报道，该物质被发现与磁铁发生反应。正如美国RAIR基金会所报道的那样，日本在处理中共病毒疫苗方面一直非常透明，同时尊重其公民的自主权。
-- 内科医生Carrie Madej博士在研究注射后也发现了异物，包括 “类似石墨烯 “的物体和 “Moderna注射器中的触角、移动的生物体一样的生物。”
-
-
-此外，10月份的一个推特帖子也同样暴露了颗粒，”颗粒聚集 “和 “纤维状结构”–一些有 “分支 “和 “环状结构”。这些发现是基于对辉瑞-生物技术公司冠状病毒疫苗样本的 “显微镜分析”。据这位自称在《柳叶刀》和《新英格兰医学杂志》等杂志上发表过100多次同行评论的匿名科学家称，该分析 “是用明视野和相差显微镜进行的，并应用了严格的科学和卫生标准”。
-
-媒体忽视或“事实核查”有关医学专家提出的证据并不奇怪。由世界各地的公民来控制信息的看门人——媒体和政治家通过要求透明度来承担责任。
-
-该小组将他们的发现转发给 “当局”，但没有得到回应。
-
-该小组已经检查了四批疫苗，并在六周前将结果传递给政府当局、EMA[欧洲医疗机构]、STIKO[德国疫苗委员会]和Paul Ehrlich研究所[德国政府机构]，但没有任何已知的回应。
-
-12月，德国医生举行了第二次强有力的新闻发布会，标题是 “接种中共病毒疫苗后的死亡和不良健康影响是否以病理学可检测的方式相关？” 。
-
-参考来源：[爆炸新闻：德国病理学家在中共病毒 “疫苗 “中发现 “惊人的 “杂质](https://rairfoundation.com/bombshell-german-doctors-find-astonishing-impurities-in-covid-vaccine-video/)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2c3ff12a-1aad-413c-bcbf-f68f4a054055-2.jpg)
-
-编辑/校对/发稿：Hetangyuese
+总编：文真
+编辑：文真
+校对/发稿：Hetangyuese
 
 **更多资讯，更多关注**
-[**纽约香草山农场 GTV–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场 GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 [**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 [**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-1.png)
+![This image has an empty alt attribute; its file name is MOS_LOGO_publish-14.png](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
 
  
 
