--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,17 +1,41 @@
 ---
-title: 【粤语配音】2022年1月10日：疫苗一定会停的
+title: 各方表示，德国的疫苗强制令可能需要几个月才能通过
 ---
-`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1845324/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1845329/)
 
-紐約香草山-香港部
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-748.png)2022年1月8日，德国法兰克福一名参与者在反对新冠措施和强制接种的示威中举着横幅，上面写着“反对强制接种”。(Hannes P. Albert/dpa via AP)
+《美联社》1月9日报道，柏林——德国执政党正在叫停强制接种冠状病毒疫苗计划，称立法者可能需要几个月的时间才能在议会中适当辩论这项有争议的措施。
 
-国内的到处都是传来这样那样的信息，灾难，共产党把中国人当牲口来管理，真的我觉得欧洲和美国的，牲口都比中国人幸福，没办法。
+11月，总理奥拉夫·朔尔茨（Olaf Scholz）曾预测“一项全面的疫苗强制令将于明年2月或3月初生效，现在每个人都可以做好准备。”
 
-这个国家已经到了这个时候，老百姓已经完全不知道什么叫人，人和畜生怎么分别了，现在是政治斗争，地方政府一切都是掩盖，都为了所谓的狗屁冬奥，中国老百姓从来不问，政府这么做合法吗？这样做对吗？他们为什么这么做？从来不会问的，这就是中国人，一点儿办法没有…可怜至极，从来没有想过政府从来不挣一分钱，所有的财富都是老百姓的，政府是给老百姓服务的，政府不是你的爹娘也不是你的主人，可是政府怎么对待中国老百姓的？新中国联邦人我们已经是保命没打疫苗，保财！很多人现在已经是发财了，报仇！收拾我们的人绝大多数已经全完蛋了，共产党已经半条命没了。
+反对疫苗强制令的人中，包括作为执政联盟一部分的自由民主党的一些成员，以及去年夏天承诺不引入全面疫苗强制令的德国前卫生部长。政治领导人已同意让立法者根据自己的良知，而不是党派路线对这个问题进行投票。
 
-我们接下来，新中国联邦和我们的同胞们，在消灭共产党以后，让我们有更多的时间更多的力量，客观地来面对大自然的力量和人类存在的来源和未来的去处和过上更加美好和超越人类，现在比较真实的生活，而不是超越现实，这就是人类科学和文明进步的一个必须发展的过程，那么现在共产党的整个代表了上帝，代表了神，代表了宇宙，“宇宙无穷大，地球是一粒沙”，你是沙中的一粒沙，我想干啥就干啥，它就是一帮流氓、一帮土匪，一切都为了它的统治，谁也没有想过，在他们统治的这种快感中，失去的是你的生命和你的家人，它绝对不是为了你好，它是在向别人秀肌肉，展示它的统治管理能力，服务它的内部的政治斗争，永远要记住，真假和善恶是最关键的，全世界印发钞票出来，他们股市往上涨，共产党搞了所谓8%的经济增长，它的股市是什么样子？香港股市是什么样子？香港的民生是什么样子？
+迫在眉睫的强制令也成为了参加反疫苗运动者集结起来的一个点，他们参加了反对德国对疫情限制措施的抗议活动。最近的一些示威活动已经演变成暴力事件，抗议者在被命令驱散后袭击了警察。
 
-接下来我相信这周或下周之间，美国欧洲关于疫苗问题的合法性，在法律上、媒体上，医学上会有重大突破，一定会停的！
+卫生部长卡尔·劳特巴赫（Karl Lauterbach）表示，他不想猜测疫苗强制令何时会生效，但承认，以它阻止最新的高度传染性变种病毒的流行，可能为时已晚。他告诉公共广播公司德国公法广播机构联盟（ARD）：“通过强制接种疫苗，我们将无法真正有效地阻止我们现在正在经历的奥密克戎（omicron）大流行。”
+
+近72%的德国人被认为“完全接种了疫苗”，而42.3%的人接受了额外的疫苗强化针注射。德国疾病控制机构在过去24小时内，报告了36,552例新确诊的新冠肺炎病例，以及77例死亡病例。
+
+**简评**：中共病毒已成为各政府侵蚀人民自由与权力的借口，疫苗强制令则是其实现阴谋的手段。为什么大范围疫苗接种后感染人数并没有明显改善？为什么不能保证安全、成分没被公开的疫苗，却要无论男女老幼强制接种？民众的身体被伤害而不自知，而敢于说不的人们则被噤声，或被标签成极端分子。经过1月6日美国国会山事件后，已经不能排除动机不纯伪装成抗议者的演员恶意挑起事端的可能性，而中共往往被发现扮演着幕后黑手的角色。
+
+新闻链接：[https://abcnews.go.com/Health/wireStory/parties-german-vaccine-mandate-months-pass-82161028](https://abcnews.go.com/Health/wireStory/parties-german-vaccine-mandate-months-pass-82161028)
+
+[https://apnews.com/article/coronavirus-pandemic-health-europe-germany-berlin-dbbc751badac470ebcff937ede42fdd1](https://apnews.com/article/coronavirus-pandemic-health-europe-germany-berlin-dbbc751badac470ebcff937ede42fdd1)
+
+翻译/简评：Dlrow
+
+PR：Julia Win
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
