--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,58 +1,17 @@
 ---
-title: 参议员瑞克·斯科特： 看看英特尔，一家美国公司，急不可耐向共产中国道歉,恶心
+title: 【粤语配音】2022年1月10日：疫苗一定会停的
 ---
-`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/1845309/)
+`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1845324/)
 
-参议员瑞克·斯科特： 看看英特尔，一家美国公司，急不可耐向共产中国道歉。恶心。 英特尔如何解释在赞助 2022 年北京奥运会的同时在国内支持“社会正义”？他们显然不介意双重职责来帮助共产主义中国粉饰种族灭绝。 【转推：指英特尔在一封给供应商的公开信中提到新疆的部分】
+紐約香草山-香港部
 
+国内的到处都是传来这样那样的信息，灾难，共产党把中国人当牲口来管理，真的我觉得欧洲和美国的，牲口都比中国人幸福，没办法。
 
+这个国家已经到了这个时候，老百姓已经完全不知道什么叫人，人和畜生怎么分别了，现在是政治斗争，地方政府一切都是掩盖，都为了所谓的狗屁冬奥，中国老百姓从来不问，政府这么做合法吗？这样做对吗？他们为什么这么做？从来不会问的，这就是中国人，一点儿办法没有…可怜至极，从来没有想过政府从来不挣一分钱，所有的财富都是老百姓的，政府是给老百姓服务的，政府不是你的爹娘也不是你的主人，可是政府怎么对待中国老百姓的？新中国联邦人我们已经是保命没打疫苗，保财！很多人现在已经是发财了，报仇！收拾我们的人绝大多数已经全完蛋了，共产党已经半条命没了。
 
-> Look at [@intel](https://twitter.com/intel?ref_src=twsrc%5Etfw), a U.S. company, jumping to apologize to Communist China. Gross.
-> 
-> How does Intel explain supporting "social justice" at home while sponsoring the 2022 Beijing Olympics? They clearly have no issues with pulling double duty to help Communist China whitewash genocide. [https://t.co/k7UQ0WC12S](https://t.co/k7UQ0WC12S)
-> — Rick Scott (@SenRickScott) [January 10, 2022](https://twitter.com/SenRickScott/status/1480604202611220486?ref_src=twsrc%5Etfw)
+我们接下来，新中国联邦和我们的同胞们，在消灭共产党以后，让我们有更多的时间更多的力量，客观地来面对大自然的力量和人类存在的来源和未来的去处和过上更加美好和超越人类，现在比较真实的生活，而不是超越现实，这就是人类科学和文明进步的一个必须发展的过程，那么现在共产党的整个代表了上帝，代表了神，代表了宇宙，“宇宙无穷大，地球是一粒沙”，你是沙中的一粒沙，我想干啥就干啥，它就是一帮流氓、一帮土匪，一切都为了它的统治，谁也没有想过，在他们统治的这种快感中，失去的是你的生命和你的家人，它绝对不是为了你好，它是在向别人秀肌肉，展示它的统治管理能力，服务它的内部的政治斗争，永远要记住，真假和善恶是最关键的，全世界印发钞票出来，他们股市往上涨，共产党搞了所谓8%的经济增长，它的股市是什么样子？香港股市是什么样子？香港的民生是什么样子？
 
-
-
-众议员迈克·沃尔兹： 当我们的国家面临来自阿富汗、伊朗、中共、俄罗斯、朝鲜和其他国家的威胁时，我们要时刻准备着，这至关重要。 很荣幸能成为共和党三军委员会下辖的武装准备委员会成员，来监督我们军队的训练，后勤等。
-
-
-
-> As our country faces threats from Afghanistan, Iran, the [#CCP](https://twitter.com/hashtag/CCP?src=hash&amp;ref_src=twsrc%5Etfw), Russia, North Korea, & others, it’s critical we're always ready.
-> 
-> Honored to serve as Ranking Member of the [@HASCRepublicans](https://twitter.com/HASCRepublicans?ref_src=twsrc%5Etfw) Readiness Subcommittee with oversight of our military's training, logistics & more. [https://t.co/FYFyL1L4DO](https://t.co/FYFyL1L4DO)
-> — Rep. Mike Waltz (@michaelgwaltz) [January 10, 2022](https://twitter.com/michaelgwaltz/status/1480598431634710536?ref_src=twsrc%5Etfw)
-
-
-
-参议员兰德·保罗： 因此，如果您感染了 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click)，您仍然可以在医院工作，但没有感染 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click) 且未接种疫苗的医生和护士会被解雇。我是唯一一个意识到这种荒唐情况的人吗？ 【附abcnews的文章:卫生官员让感染 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click) 的员工继续在医院工作】
-
-
-
-> So you can still work in a hospital if you have active COVID but doctors and nurses who don’t have COVID and are unvaccinated are fired. Am I the only one who perceives the absurdity of this scenario?[https://t.co/8vHumvcYoo](https://t.co/8vHumvcYoo)
-> — Senator Rand Paul (@RandPaul) [January 11, 2022](https://twitter.com/RandPaul/status/1480711614240337923?ref_src=twsrc%5Etfw)
-
-
-
-参议员卢比奥新闻办公室： 卢比奥:英特尔在向北京屈服后，不应该得到美国政府的芯片支持资金。 （转卢比奥官网声明）
-
-
-
-> RUBIO: Intel should not get CHIPS funding from U.S. government after caving to [#Beijing](https://twitter.com/hashtag/Beijing?src=hash&amp;ref_src=twsrc%5Etfw).[https://t.co/0mN77T5KR1](https://t.co/0mN77T5KR1)
-> — Senator Rubio Press (@SenRubioPress) [January 10, 2022](https://twitter.com/SenRubioPress/status/1480680900694319115?ref_src=twsrc%5Etfw)
-
-
-
-国务卿布林肯： 中华人民共和国对美国国际宗教自由委员会四名成员的制裁，是中国对普世权利的又一次冒犯。对美国国际宗教自由委员会成员的制裁，不会隐藏或转移世界对中国在新疆侵犯人权和暴行的关注，包括正在进行的种族灭绝。
-
-
-
-> The PRC’s sanctions on four members of the U.S. Commission for International Religious Freedom constitute another PRC affront against universal rights.
-> — Secretary Antony Blinken (@SecBlinken) [January 10, 2022](https://twitter.com/SecBlinken/status/1480620087547678728?ref_src=twsrc%5Etfw)
-
-
-
-
+接下来我相信这周或下周之间，美国欧洲关于疫苗问题的合法性，在法律上、媒体上，医学上会有重大突破，一定会停的！
 
  
 
