--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,25 +1,43 @@
 ---
-title: 中共把未来58年的韭菜全割完了
+title: 阿拉巴马州参议员称:新冠病毒是在中共武汉实验室制造的生物武器
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1845196/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1845205/)
 
-房子是什么概念？房子把你58年能挣的工资已经提前给你剥削走了。不但让你58年要付这个房子的房贷，让你的儿子、孙子都58年(要付房贷)
+![Firebrand Congressman Mo Brooks, a Trump Ally, Launches U.S. Senate Run |  Top News | US News](https://www.usnews.com/dims4/USNEWS/9b3e41b/2147483647/thumbnail/640x420/quality/85/?url=http%3A%2F%2Fmedia.beam.usnews.com%2F94%2Fcacc4c71ccce88db88a252dbc58ff7%2Ftag%3Areuters.com%2C2021%3Anewsml_LYNXMPEH2M00X%3A12021-03-23T005538Z_1_LYNXMPEH2M00X_RTROPTP_3_USA-CONGRESS-ALABAMA-BROOKS.JPG)资料图：阿拉巴马州代表莫·布鲁克斯（Mo Brooks）参议员
+《布萊巴特新闻网》1月8日报道：阿拉巴马州代表莫·布鲁克斯（Mo Brooks）参议员周六在福克斯新闻频道（FNC：Fox News Channel）的节目中声称，新冠病毒（COVID-19）大流行病是由中共制造的“生物武器”。
 
-**【郭先生直播摘要】**** 2022.1.5 ****中共把未来****58****年的韭菜全割完了**
+阿拉巴马州的美国参议院候选人布鲁克斯告诉FNC的“福克斯新闻直播”(Fox News Live），尽管民主党领导人不愿意讨论这种大流行病，但这将是我们必须要“学会处理”的事情。
 
-**郭先生：**
+“他说: “底线是这样的——人们需要了解这一点: 这是一种生物武器，是在中共武汉生物武器实验室与人民解放军一起制造的。它将会存在很长一段时间，我们必须学会应对。我们不能闭门造车，这是在民主党州长、市长的协助下制定的不幸的政策之一，它对我们的经济造成了很大的损害，在某种程度上说，乔·拜登（Joe Biden）总统也是如此。这样的协助是不管用的。”
 
-那么我们今天看世界的经济，和房地产的时候，你知道意味着什么？  兄弟姐妹们？
+FNC的杰奎·海因里希(Jacqui Heinrich)对布鲁克斯的说法提出质疑，并补充说“没有任何证据”证明这是一种“生物武器”。
 
-我告诉你，共产党会让你，一定(要)记住刚才你们谈“菜篮子” 、谈房地产价格的时候，共产党想啥，你们一定要懂得，他们永远说  叫什么？“菜篮子”工程，就什么时候不保  我也得保你吃饭吃得起、吃菜吃得起，我让你饿不死  吃草能吃得起。你所有你挤出的是奶，换回来的是草，也就是青菜，青菜和草有什么区别？  不就是能吃不能吃吗？但是肉你会逐渐减少。
+布鲁克斯坚持认为他看到了证据，并加倍强调了这一说法。
 
-房子是什么概念？房子把你58年能挣的工资，已经提前给你剥削走了，不但让你58年要付这个房子的房贷，让你的儿子、孙女都58年。我让你死不了，永远为我打工。第二个房地产现在意味着什么？  战友们知道吗？共产党所有的房地产，几乎把所有中国人未来58年的韭菜全割完了。它一定保住，不能让你倒，但是它绝对不允许把房地产变成你真有钱，就你可以兑现  你可以对外流通，那是对它来讲是噩梦。因为它是个泡沫嘛，所以对中国的房地产的控制  ，就是控制中国人的整个未来。
+“我已经看到了足够的信息——有些是机密信息，有些不是，有些是与在中共国参与了生物武器的制造项目的人的私人会议后得到的信息，那个人告诉我们正在发生什么。这是一种生物武器。它是人造的，而且是在武汉生物武器实验室制造的。现在，我可以百分之百肯定地说吗？不，但我可以高度、高度、高度自信地说，这就是我的信念。”
 
-这就是刚才唐平还记着，非常重要的刚才(昔马)千羽讲的，这就是商鞅“弱民五术”最核心的，让你忙！让你穷忙 ，让你忙疯。永远不去思考，让你永远不去面对你的问题。房地产、车  让你忙一辈子的，包括咱傻的穷人要买保险，穷人要买未来了，想买教育，都得给你干掉。现在中国是什么？不允许知道外面，不允许了解外面，不允许接触国际教育。
+简评：
 
-不允许学英文，不允许知道基督，不允许知道耶稣，知道什么？让你住在房子里老老实实地打工，你们不用谈菜价和肉价 。兄弟姐妹们，我可以告诉你  在共产党倒闭之前，国内的菜价、粮食价、肉价，几乎不会暴涨，但房价不会大跌，只有房地产下来爆破，共产党就灭亡，就这么简单。共产党现在护的房地产盘，就是护的它自己的安全和未来。护的它的“菜篮子”盘子 ，就是护着它的未来，这是为什么共产党把全世界的粮食，62%的粮食全买进去了，因为它知道老百姓真没得吃，真跟他玩命。
+阿拉巴马州参议员候选人莫·布鲁克斯是川普支持的候选人之一。美国中期选举将在今年举行，其对中共病毒的评论“新冠病毒是在中共武汉生物武器实验室制造的生物武器”，既强硬又一语中的，这也代表着民心所向。
 
-视频剪辑：小蜜蜂 | 听写：中年少女 | 翻译 ：中年少女| 校对：Polaris |视频制作+字幕：刀锋舞者 | 编辑&发布：断播
+查找出中共病毒的的源头和真相是势在必行的，中共是世界的的破坏者，更是美国的威胁，美国民主党和共和党灭共决心是一致的，他们也会联合世界正义的力量一起消灭中共，恢复世界正常秩序。
+
+翻译/简评: JS
+
+PR：clau
+
+新闻链接：[https://www.breitbart.com/clips/2022/01/08/mo-brooks-covid-a-bioweapon-created-in-the-wuhan-bioweapons-lab-of-the-communist-chinese-party/](https://www.breitbart.com/clips/2022/01/08/mo-brooks-covid-a-bioweapon-created-in-the-wuhan-bioweapons-lab-of-the-communist-chinese-party/)
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
