--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,31 +1,26 @@
 ---
-title: CDC主任公然将死亡病例归因为终末期患者
+title: 澳洲肯德基或因疫情出现供给短缺
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1847765/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1847851/)
 
-作者：
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-1月10日，美国疾病与预防控制中心主任罗谢尔·瓦伦斯基在接受采访时表示，超过 75% 的“中共病毒”死亡案例，集中发生在至少有四种合并症的群体中，并进一步强调这些患者已处在终末期，言下之意，接种疫苗与他们的死亡毫无关联。这一带有优生学色彩、并企图掩盖疫苗伤害的言论，即刻引发公众一片哗然。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截屏2022-01-11-上午9.53.15.png)
-此前，瓦伦斯基在一档电视节目中承诺，CDC 将开始提供修订后的数据，详细地说明美国与“中共病毒“相关的 83.6万例死亡病例的详细分布，并声称这需要一段时间。时隔仅两天，瓦伦斯基就草率地声称，全美四成三的死亡病例仅限终末期多种并发症的患者，CDC网站也及时更新了数据，让公众为之震惊。
+撰稿：Gradient Boost
+![](https://assets.gnews.org/wp-content/uploads/2022/01/011102-1.jpg)网络图片
+澳大利亚全国各地的供应链问题导致购物者不得不面对空荡荡的货架，同时运输、配送和商店的工人被迫隔离无法继续工作。继连锁超商之后，新一轮疫情爆发对澳大利亚的连锁餐饮行业的影响也逐步显现。现在，肯德基已经确认它受到了Omicron的冲击，一些餐点现在已经从该品牌的菜单上消失了。
 
-时评人士指出，自疫情大流行爆发以来，美国的”中共病毒“疫苗的有效性和安全性一直备受质疑，自德尔塔变种病毒，到当下的奥米克戎毒株，居高不下的感染率和政府近乎变态的疫苗政策，更使民众逐渐丧失了对医药监管机构的信任。美国疾控中心一再罔顾事实，掩盖疫苗无效以及潜在的风险，甚至不惜修改接种疫苗以及免疫医学的相关概念，将这一全世界重大公共卫生事件引入了歧途。
+肯德基的一位发言人表示：“不幸的是，我们的供应链已经中断，我们的一些餐厅将提供删减版本的菜单……对于这给我们的客户造成的任何问题，我们深表歉意——我们正在尽一切努力帮助我们的供应商重回正轨。”
 
-参考链接：
+空荡荡的货架出现在全国各地，而农民们已经证实新鲜食品实际上一直都在生产和栽培当中，问题只是如何把它们送到顾客手上。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-Jan.jpeg)
+澳大利亚新南威尔士州农民协会主席詹姆斯杰克逊说：“我们的种植者正在向悉尼市场运送大量农产品，我们正在努力确保农场企业能够继续收获这些作物……可悲的是，我们看到一些公司和个人将疫情作为哄抬价格的机会，因此我们会要求 ACCC 密切关注零​​售商，以确保他们不会让价格高于新鲜水果和蔬菜的农场门价。”
 
-总编：
-编辑：
-校正/发稿：呼吸的雾霾（文小呼吸）
+相比肯德基，快餐巨头麦当劳则相对较为乐观。麦当劳的发言人表示：“与许多企业一样，麦当劳澳大利亚一直在谨慎管理我们的供应链——其中大部分都位于澳大利亚……在整个大流行期间，我们将继续与我们强大的长期供应商、农民和生产商网络密切合作，以确保我们的客户能够继续享用我们美味的食物。”
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+新闻参考链接：[KFC facing in-store shortages as Omicron supply issues continue](https://www.9news.com.au/national/coronavirus-food-shortage-updates-kfc-affected-nsw-farmers-call-for-rapid-antigen-tests-supermarkets-empty-shelves/b1dac67d-ab52-4304-9dbc-21f5b9a06f93)
+
+
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
