--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,25 +1,31 @@
 ---
-title: 澳洲肯德基或因疫情出现供给短缺
+title: 英特尔向中共低头后又删涉疆文字
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1847851/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1847962/)
 
-撰稿：Gradient Boost
-![](https://assets.gnews.org/wp-content/uploads/2022/01/011102-1.jpg)网络图片
-澳大利亚全国各地的供应链问题导致购物者不得不面对空荡荡的货架，同时运输、配送和商店的工人被迫隔离无法继续工作。继连锁超商之后，新一轮疫情爆发对澳大利亚的连锁餐饮行业的影响也逐步显现。现在，肯德基已经确认它受到了Omicron的冲击，一些餐点现在已经从该品牌的菜单上消失了。
+#### 撰稿：日本东京方舟农场  幽蘭自得
 
-肯德基的一位发言人表示：“不幸的是，我们的供应链已经中断，我们的一些餐厅将提供删减版本的菜单……对于这给我们的客户造成的任何问题，我们深表歉意——我们正在尽一切努力帮助我们的供应商重回正轨。”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/EE66B8A3-9FEB-4134-A7B8-17021ECFF0DF.jpeg)（图片来自ALY SONG/REUTERS）
 
-空荡荡的货架出现在全国各地，而农民们已经证实新鲜食品实际上一直都在生产和栽培当中，问题只是如何把它们送到顾客手上。
+据《中央社》1月11日报道，美国芯片制造商英特尔（Intel）在写给供货商的年度信函中要求他们勿使用来自新疆的劳工、产品或服务，但因受到中共网军围攻低头致歉，现如今又删除所有涉及新疆的文字。
 
-澳大利亚新南威尔士州农民协会主席詹姆斯杰克逊说：“我们的种植者正在向悉尼市场运送大量农产品，我们正在努力确保农场企业能够继续收获这些作物……可悲的是，我们看到一些公司和个人将疫情作为哄抬价格的机会，因此我们会要求 ACCC 密切关注零​​售商，以确保他们不会让价格高于新鲜水果和蔬菜的农场门价。”
+据报道，英特尔去年12月23日在官网公布写给供货商的信函，内容提到，在多国政府对新疆实施限制措施后，英特尔“被要求确保供应链不使用任何来自新疆的劳力、货源或服务”。之后，中共在社交媒体掀起对英特尔的围攻。
 
-相比肯德基，快餐巨头麦当劳则相对较为乐观。麦当劳的发言人表示：“与许多企业一样，麦当劳澳大利亚一直在谨慎管理我们的供应链——其中大部分都位于澳大利亚……在整个大流行期间，我们将继续与我们强大的长期供应商、农民和生产商网络密切合作，以确保我们的客户能够继续享用我们美味的食物。”
+英特尔上月已为引发“困扰”致歉，称公司承诺避免供应链使用新疆产品或服务，只是想表达遵守美国法律，并非就新疆议题声明立场。
 
-新闻参考链接：[KFC facing in-store shortages as Omicron supply issues continue](https://www.9news.com.au/national/coronavirus-food-shortage-updates-kfc-affected-nsw-farmers-call-for-rapid-antigen-tests-supermarkets-empty-shelves/b1dac67d-ab52-4304-9dbc-21f5b9a06f93)
+如今，英特尔官网公布的信函也不见上述段落或任何提到新疆及中共国的文字。信函中只提到，英特尔禁止所有供应链出现“任何人口走私或非自愿劳动，例如强迫劳动、抵债劳动、监狱劳役、契约奴工或苦役”。
 
+针对英特尔在信函中删除所有提及新疆字词的这一事件，美国共和党籍联邦参议员卢比欧（Marco Rubio）提出严厉批评。他在声明中表示，英特尔的怯懦是另一个在经济上依赖中共国的可预见结果。他还表示，与其屈辱地道歉和自我审查，企业更应该把供应链移到不采用奴隶劳动或不实施种族灭绝的国家。
 
+*参考链接： [https://www.cna.com.tw/news/aopl/202201110092.aspx](https://www.cna.com.tw/news/aopl/202201110092.aspx)*
 
+* * *
 
+*素材采编：幽蘭自得*
+
+*编辑：文顺*
+
+*发布：miumiu*
 
  
 
