--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,27 +1,40 @@
 ---
-title: 钱都去了哪里？ 并非临时起意，中共国经济学家吁印钱2万亿生娃
+title: 文贵视角:共产党隐藏昆仑山的宇宙密码
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847570/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1847673/)
 
-撰稿/配图：东京樱花团/Ob
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-801.png)
-看中国2022年1月11日讯，近日中共国经济学家任泽平发表万字长文“催生”窜登微博热搜。他呼吁官方建立“鼓励生育基金”，央行多印2兆人民币，用10年时间鼓励社会多生5000万个孩子，来解决人口老龄化与少子化问题。相关话题引发不小争议，对此任泽平于10日又做出最新回应。
+撰稿:牛小妹
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Image-1-2-2.jpg)
+**风水就是磁场、就是科学、就是人生的密码**
 
-“印钱2万亿生娃 重任交给80后”1月10日清晨，东吴证券首席经济学家任泽平的公众号《泽平宏观》发布一篇名为《解决低生育的办法找到了——中国生育报告》的文章，文中引述调查数据称，低生育的主要原因是生养孩子成本太高、房价太高，占比分别为41.5%、27.2%。因此，此时降低生育养育成本是解决低生育率的主要出路，建立鼓励生育基金在短期内可以稳增长、拉内需，从长期来看可以改善供给侧、优化人口结构，助力民族复兴。
+“在人类出现之前，地球就已经有震龙的存在。龙脉就是地球的气场，好比人活着时候的那口气。风水就是磁场，就像人的那口气，没有那口气人就死了。龙脉就是地球的气场。”文贵先生说出风水的奥秘，”我们所讲的风水，就是磁场。共产党不让你信风水，就是不让你懂磁场，不让你懂人生的密码。”
 
-不过，这并不是上热搜的关键。文章呼吁官方尽快推出鼓励生育基金，同时谏言央行多印2万亿人民币，用10年时间鼓励社会多生5000万孩子，解决人口老龄化少子化问题。任泽平最新回应：政府企业没钱。随后，任泽平又对“印钱生娃”这个热点进行了回应。他说，未来10年多生5000万是怎么来的？也就是每年多生500万。
+“人类的命运大同小异，灵魂永远不生不灭，人和大自然相处的关系，人和自己相处的关系，从来不曾变化。人的灵魂是有质量的，人死后身体的重量要比死前少30多克。”文贵先生谈到人生的密码，”历史上如印度、玛雅、俄罗斯、葡萄牙帝国，无论曾经如何辉煌，对生、死以及灵魂的理解都是一样的。”懂得磁场风水的奥妙才能解开人生的密码。”目前科技已经读懂了一部分大自然的密码。过去神话中的千里眼及顺风耳，如今的科技都实现了。我们在屏幕中对话，也是有温度、有磁场的。”文贵先生提点大家。
 
-2021年综和生育率1.1，新生儿1000万左右，而代际平衡需要每年1500万，即每年多生500万。至于央行为何要印2万亿人民币？任泽平指出，OECD国家鼓励生育相关的家庭社会福利支出占GDP比重2%-3%，中共国GDP有110万亿元，因此鼓励生育基金应该是2万亿。
+**昆仑山藏有地球的龙脉**
 
-“此处注意，是每年多印2万亿用于鼓励生育。”他还特别提到，“印钱生娃”需要央行印钞，但却不能从中共国财政支出。“因为现在疫情、经济下行压力大、土地财政大幅下滑，政府、企业和家庭都没钱。”任泽平更强调，“这个建议不是临时起意，是经过长年的研究探索和国际经验比较的出来的，是经过科学论证的。鼓励生育基金，印钱生娃，初听很劲爆，细想很有道理。”要不要再生？大陆网络炸锅任泽平的这番言论发出后，引发民间热议。有网友说，“告诉你一个现实，80后女人能生二胎的都已经生了，绝大部分不会生三胎，因为生二胎后悔死了。找工作的时候嫌我们老，找韭菜的时候又说我们好，你们想怎样？”也有网友表示，“鸟没窝能下蛋么？多印钱没影响？只会导致房价更高，生的更少。现在主要问题是很多人买不起房，结不起婚。还知道90后、00后不愿意结婚生子，算你活得清醒。”
+“地球的龙脉，就是地球的呼吸系统，崑崙山的磁场就是地球的龙脉。一旦昆仑山失去磁场，地球也就化为乌有。”文贵先生惊爆崑崙山的奥秘，”昆仑山的气场可以用简单的测试来证实，譬如找有缝隙的地方立一个铜钱或银元，你会发现大概在凌晨12点的时候，那个铜钱或银元会发生抖动发出振颤的声音，这就是磁场，影响磁场变化的地方就是龙脉。”
 
-泱泱大国，连个娃都养不起？！勤勤恳恳中国人起早贪黑没日没夜拼命地干，生个孩子还要向苍天再借2万亿！口口声声号称“厉害”了的国，十四亿人民几十年辛辛苦苦的血汗钱究竟去了哪里？进了谁的腰包？又做了什么？到如今混到生个娃都要借钱的地步！这是何等的悲哀！这是何等的无奈！一群败家子前无“远瞻”，后无“顾忌”，肆意妄为，祸国殃民，这是一群窃国大盗，这是一群败家子！认不清中共的邪恶本质再好的建议都会沦为屠宰人民的工具！
+**共产党在昆仑山设立祭坛**
 
-消息来源：[中国经济学家吁印钱2万亿生娃 全网炸了(组图)](https://m.secretchina.com/news/gb/2022/01/11/994774.html)
+“共产党夺取政权之后，就在昆仑山建立了一个飞碟形状的八卦阵祭坛，从上到下共有999阶的天梯，有专门的军队驻守，只有属相非虎非猪的人才可以进入。所有驻守的军人，没有一个可以活着退伍回去。共产党每年都会挑选许多处女处男去敬奉山神，有新疆、西藏的，也有彝族的、傣族的、蒙古族的和汉族的人。”郭文贵先生在大直播中爆料。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+共产党是天下最迷信的魔，却要求人民不要迷信。”真正的迷信是指对大自然的错误理解。我们相信大自然，正确理解大自然的密码，那是信仰。我们千万不能迷信，但一定要有信仰。要正确理解大自然的密码，正确理解人的来源和去向何处，正确理解宇宙、地球和人类之间的关系。”文贵直指信仰的重要性，”中国历史从来都是敬重山川龙脉，敬重龙和各种神灵，但共产党却把这种对自然的敬重视为糟粕，恣意破坏中国的风水和磁场，造成大气污染、土壤污染、山河污染。”
+
+**共产党屠杀各民族以祭祀山神**
+
+“中共每年都会在特殊的时辰挑选七百个处男、处女去祭拜昆仑山神。为什么执行秘密的部队从来没有回来过？都献给山神了。”只有了解共产党的邪恶，才能彻底消灭共产党。”共产党不只针对新疆人，对任何种族都是大屠杀，它对昆仑山神供奉56个民族的处女处男。不灭共，任何种族都无法存活。他是魔，你是人。人类如果没有信仰是无法灭共的。”文贵先生说明灭共是正义的必须。
+
+“就因为当地人民失去信仰，天津，西安，郑州的疫苗灾害才会如此严重。”人类必须要有敬天、敬地、敬大自然的信仰，才能洗刷贪、瞋、癡、慢、疑的人性，否则难逃疫苗灾难的诅咒。”咱们遇到了山妖、河王八，就是共产党。共产党把风水，磁场全毁了。万佛万神饶不了共产党。人不灭共产党，天也会灭了它!”文贵先生说出天机。
+
+**拥有共同磁场的同修人**
+
+“新中国联邦人是拥有山川大地密码，有共同磁场的人。”文贵先生传递宇宙生命的讯息，”我认为太阳系之外就是天堂，不同的修行会有不同的果报。当你修行达到更高的时候，灵魂就会昇华，离开地球去到某个星座。就像玛雅文明，回到了他原来的星座。在那个星座，你的身体（载体）可能是另外一个样子。就像佛教所说的是一个欢乐的世界，一个没有贪嗔痴慢疑的世界。也像耶稣所说的天堂。”
+
+“我相信海里的生命和山里的生命比我们地球人类的生命还丰富 ! 如果你在海底潜过水，去过深山里的幽洞、玻璃洞、琉璃洞，去过坦尚尼亚的蛇山，去过撒哈拉大沙漠、北极、南极，你就会觉得地球的75亿人的生命非常渺小。”文贵先生感叹人类对生命奥秘的无知，
+
+生命本身就是一场修行，一场排除自身贪、嗔、癡、慢、疑的过程，而冠状病毒疫苗灾害正是地球人承受苦果、修炼正气的道场。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
