--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,27 +1,28 @@
 ---
-title: 中共盜國賊貪腐程度駭人聽聞
+title: 有声&#124;中共国正在加速推进数字人民币
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1847514/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1847662/)
 
-采編： Quitman 編輯撰稿：硫酸羥氯喹64
+配音：香草山健身部 – 玫瑰园
+![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+中共国媒体鼓吹自1月4日以来数字人民币app下载掀起了热潮，同时数字人民币用户数、交易订单数及交易金额都有显著的增长。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a-24-edited.jpg)圖片來源：ZXW
+为了在全国尽快的推进数字人民币，中共在各个领域不遗余力的展开推广，在十个试点城市及冬奥会场景上，简化注册使用门槛，新用户注册仅通过输入手机号、设置用户名及支付密码，就可自行选择运营机构快速开通钱包。同时在工商银行、农业银行、中国银行、建设银行、[交通银行](http://stock.finance.sina.com.cn/usstock/quotes/BCMXY.html)、邮储银行、[招商银行](http://stock.finance.sina.com.cn/usstock/quotes/CIHKY.html)、网商银行（支付宝）、微众银行（微信支付）等9个运营机构的钱包上直接升级实名钱包。在数字人民币的入口上纷纷接入多家平台，在应用场景上大力推进“衣食住行“的拓展，美团、京东、小米、腾讯都已经完成了相应的支持和部署。
 
+文字版原文：[中共国正在加速推进数字人民币](https://gnews.org/zh-hans/1844302/)
 
-據[GTV文貴大直播]節目1月9日報道，權傾一時的中共盜國賊王岐山黨羽之一，[人壽保險公司]董事長王濱近期因在與獨裁黨魁習近平的權力內鬥失勢後而遭當局調查，並被指控其在任期間，生活極度奢靡，並利用手中權力為王岐山行賄受賄，作孽無數。
+音频处理：喜山必胜Maverick
+发稿：呼吸的雾霾（文小呼吸）
 
-據悉，王濱在2006年以前，僅公款購買古木就花掉20多億元人民幣。並曾在香港的[Van Cleef] 珠寶店中，指使[海南白馬廣告公司]為其支付近1000萬美元購買了當時最昂貴的四塊手表作為賄賂中共高官的贓物。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E6%9C%88%E5%B0%8F%E5%9B%BE-1.jpg)
 
-[GTV]報道稱，王濱對天價名表的收藏和占有幾近瘋狂，並為此專門獵取瑞士特製版名表以滿足中共各盜國賊家族欲壑難填的貪婪。例如，他此前搜刮並送給王岐山的[江詩丹頓]特製版手表，每塊都價值近1億美元。由於持續大量購買，導致在過去2-3年的疫情期間，瑞士名表的價格普遍都高漲了近10倍，而其中的大部分幾乎都被中共盜國賊家族所獲。
-
-目前，在中共盜國賊集團中，如同王濱這種碩鼠巨貪之輩數不勝數，但他的邪惡和王岐山的其他走狗如康點、田國立、田惠宇、朱雲來和朱燕來相比堪稱小巫見大巫。有鑒於此，不徹底鏟除中共邪魔，所有黎民百姓將世代為奴，永無天日。
-
-* * *
-
-發稿：硫酸羥氯喹64
-
-新聞鏈接：https://gtv.org/video/id=61dade8c4658a73785d25465
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
