--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,35 +1,24 @@
 ---
-title: 中共为维护邪魔统治在昆仑山设下风水祭坛
+title: 澳洲维多利亚地区数千医护人员无法进行工作
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1847827/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1847913/)
 
-作者：银河勇气星—骄子
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-1月9日，郭先生大直播中揭穿了中共以“无神论”洗脑国人，实则是彻头彻尾的巫术迷信者的本质。更有甚者，为了维护统治，中共当局不惜耗费巨额百姓税收，在昆仑山设下风水祭坛，以巫术续命。
+撰稿：Gradient Boost
+![](https://assets.gnews.org/wp-content/uploads/2022/01/011104.jpg)图片涟源：Pexels免费照片素材库
+当地时间周二，澳大利亚维多利亚州又记录了37,994例新增CCP病毒感染病例，同时还有13人不幸因病去世。目前维州地区总共有861人因CCP病毒住院，同时还有117人因CCP病毒而处于重症监护状态。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide2-4.jpeg)
+3,392 名医院工作人员和 422 名维多利亚救护车工作人员由于感染CCP病毒或成为病例密切接触者而无法工作，这导致该州卫生系统出现了普遍的人员短缺。然而，州长丹尼尔安德鲁斯表示，预计受影响的员工人数会更多，因为这些数字仅为自我报告的病例。
 
-喜马拉雅-昆仑山系形成于6500万年前，其庞大的规模和多样化的地质地貌，成为欧亚大陆重要的气候、生态影响因素。中国的远古地质经书《山海经》，称昆仑山为“万山之祖“。进入二十世纪，越来越多的研究，也相继表明了喜马拉雅山-昆仑山系不同寻常的地质学的特征。
+维多利亚州目前的双剂疫苗接种率为 93%，有17% 的居民已经完成了加强针的接种，但严重的疫情却并没有因此受到阻遏，反而呈现出愈演愈烈的态势。而在昨天，维州的疫苗预约系统正式对5 至 11 岁的儿童开放，目前已预有大约 39,000 名儿童预约CCP病毒疫苗接种。
 
-迷信堪舆学说，是中共历代领导人的典型特征。自毛泽东时代开始，昆仑山的风水祭坛便成为中共权力的来源，据郭先生回忆，中共当局在昆仑山下所设的祭坛，其规模和豪奢程度令人咋(音“则“)舌，有九百九十九层天阶，外观似外星飞船，并且严格按照八卦阵型排布。自建坛伊始，无论任何天灾人祸，中共从未停止搜刮民脂民膏来建立这个祭坛。丧心病狂的中共当局，不惜以活人祭祀的形式，每年屠杀数百童男童女。该活祭任务往往由中共在新疆、西藏驻地的特种兵执行，官兵在任务后皆被灭口。这类大大小小的”活祭“、”屠杀“，只是中共在新疆、西藏对各民族大屠杀的一个缩影。
+安德鲁斯先生同时还宣布了一项 400 万美元的赠款计划，用于补贴全科医生和社区药店推广学校接种CCP病毒疫苗，以增加儿童接种率。
 
-郭先生表示，这个祭坛以中华儿女鲜活的生命“供奉着“着中共常委的血脉，诅咒着中华大地56个民族。上个月，中共习近平当局将北京盘古大观的龙头以巨大外围铁幕加以掩盖，同时施展巫术，诅咒郭文贵先生，这一行径已被日本主流媒体密切跟踪报道，中共依靠神秘力量来延续邪魔统治的行径，已全球尽知。
+昨日，维多利亚州已经宣布了新的强制CCP病毒疫苗加强针政策，适用于一些重点工作岗位——其它岗位后续也可能出台相关政策。同时，新的限制管理措施也将生效，从 1 月 12 日星期三晚上 11 点 59 分起，在维多利亚州，酒店和娱乐场所的室内舞池将关闭，仅婚礼除外。另外对于医院探视也将有新的限制和要求。
 
-参考链接：[2022年1月9日 文贵大直播：哈薩克斯坦局势进展分析；青海地震几大山脉蓝莲花](https://gtv.org/video/id=61dade8c4658a73785d25465)
+新闻参考链接：[Thousands of hospital staff unable to work as Victoria records 37,994 new cases of COVID-19](https://www.9news.com.au/national/coronavirus-victoria-updates-new-case-numbers-restrictions-return/124f6595-3287-492e-8d5a-5c48a80fabee)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
 
-总编：Zion文恩
-编辑：Zion文恩
-校正/发稿：谐趣园
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
