--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,25 +1,25 @@
 ---
-title: 美国人权活动家呼吁在北京奥运会期间开展“小熊维尼”观赏活动
+title: 澳洲大型连锁超商再度出台新的限购政策
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847805/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1847886/)
 
-**撰稿：东京樱花团/盖特第一批注册**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-106.png)
-**美国人权活动家肖蒂接受美国之音的采访时说北京冬奥会是种族灭绝奥运会，应该坚决抵制。**
+撰稿：Gradient Boost
+![](https://assets.gnews.org/wp-content/uploads/2022/01/011103.jpg)网络图片
 
-**她呼吁民众冬奥会期间拒绝收看运动会直播，并且要在奥运会期间观看动画片《小熊维尼》和1989年天安门事件的纪录片。**
+由于 CCP 病毒造成的员工短缺和供应链问题对库存产生了持续的影响，澳大利亚大型连锁超市Coles 对某些杂货实行了新的购买限制。此前，Coles已经对一些食品做出了限购措施，例如鸡胸肉和香肠一次只能购买两包。
 
-**针对北京冬奥会的赞助商，苏珊也计划发起不买运动。**
+而现在，一些日用品和非处方药物也将被纳入限购列表当中。例如卫生纸一次只能购买一包，而扑热息痛、布洛芬和阿司匹林每包限购两包。
 
-**信息源：**
+这家超市巨头本周二在 Facebook 上表示：“由于大流行相关的供应链中断，我们商店的产品供应受到了影响……“我们的团队在这段艰难时期努力工作——请记住向他们展示他们应得的善意和尊重。””
 
-**[北京五輪期間に「くまのプーさん」視聴キャンペーン、米人権活動家が呼びかけ＝韓国報道](https://news.yahoo.co.jp/articles/d200c2d288996607f7d513afbf357269595486dd/images/000)**
+同时Coles也在社群媒体上表示，恐慌性购买是完全没有必要的，尽管部分商品的供给会出现一定的限制。在澳大利亚东部各州，尤其是悉尼市所在的新南威尔士州，空空如也的货柜已是司空见惯的常态。
 
-**编辑：东京樱花团/知了知了**
-**发布：东京樱花团/**yuxingcao01
-![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+然而，与大流行开始时由恐慌性购买引起的供应短缺不同，当前的问题是供应链中断的结果，因为许多物流工人因 Omicron 变体的传播和爆发而被迫处于隔离状态。当前受到影响最为严重的主要是食品产业，不论是新鲜食品还是可以长期保存的商品。
 
+澳洲另一家大型连锁超商Woolworths Group 的首席执行官上周也承认了保持货架库存的困难程度。他表示，目前尚不清楚供应链条以及供给流程何时才能恢复正常。
 
+新闻参考链接：[Coles introduces new nationwide buying limits on certain products](https://www.9news.com.au/national/coronavirus-supermarket-supply-shortage-coles-introduces-new-nationwide-buying-limits-on-groceries/6d8949ab-eb72-4999-aeb3-557404626eb3)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
