--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,34 +1,36 @@
 ---
-title: 中共国：互联网活跃用户首次出现负增长
+title: 樱花灭共诗——望昆仑（新韵）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1847738/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847819/)
 
-**【雅典娜快讯】，紧贴时代脉搏**
+撰稿：东京樱花团/曲非烟
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-39.jpg)
+昆仑高万仞，
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/未标题-1-2.png)
+兽锁九天门。
+
+海内延龙脉，
+
+河源哺夏民。
+
+巍峨峰自在，
+
+渺远域精神。
+
+凝眺喜山处，
+
+虚极忘垢尘。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-802.png)
+插图：东京樱花团/闪闪
+
+校对：东京樱花团/知了知了
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
 
 
-整理报道：BENJ1
-编辑：Mttfly
 
-据东方财富网1月11日报道，易观分析重磅发布《数字经济全景白皮书》数字经济盘点预测篇显示，中国移动互联网活跃用户规模在2021年Q1首次出现环比负增长。
 
-移动互联网人均单日使用时长也在2021年上半年较2020年同期大幅下滑，下半年经历反弹后维持在日均六小时以上，但还未恢复到2020年顶峰水平，进一步提升使用时长困难加剧，中国移动互联网已行至周期末端，进入存量博弈时代。
 
-证卷时报网去年报道，2021年1季度，三、四、五线城市用户比重进一步提升。一、二线城市用户比重下降，这可能预示着大城市人口也进入了另一个拐点。
-
-参考新闻：
-[易观分析《数字经济全景白皮书》：互联网活跃用户首次出现负增长](https://caifuhao.eastmoney.com/news/20220111113824398213430)
-[机构报告显示：移动互联网用户增长首现拐点](https://company.stcn.com/gsxw/202105/t20210505_3196214.html)
-
-*发布：Mttfly*
-**
-更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
