--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,29 +1,44 @@
 ---
-title: 《天池活水》｜上善若水 好女人旺三代
+title: 文贵先生谈喜币价值 寄语墙内战友
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1847713/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1847804/)
 
-**—土生萬物天池寬   正道乾坤活水源 —**
-[![](https://assets.gnews.org/wp-content/uploads/2022/01/Unknown-1-1.jpeg)](https://gtv.org/broadcast/watch/61dd6ba0a6dfdd6031526aa2)[点击图片可看完整视频](https://gtv.org/broadcast/watch/61dd6ba0a6dfdd6031526aa2)
-🌈**主題： 上善若水 好女人旺三代   **
+作者：纽约香草山 医疗部 云豹
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+在2022年1月9日大直播中，郭先生主动聊起喜币，尤其对墙内战友衷心叮嘱，保证其投资信息与回报的安全。
 
-📝**副題： 自重 珍惜 勇氣 從金融風暴中爆料革命中看國之好女性  於家於國之重器  **
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide1-7.jpeg)
 
-1998年 金融風暴來襲 變買手飾金銀 捐款捐物 大韓民國女性 當仁不讓 與國運共呼吸
+首先，自身的安全。不要因急于买喜币，不考虑风险去银行汇钱，结果可能被举报抓捕询问。
 
-2021年 病毒疫苗災難 媒體掩蓋事實 控制輿情 新中國聯邦女性 直播揭露 還世界之真相
+其次，先与所在农场联系，做好KYC，将帐户准备好。
 
-創建GTV GNEWS  蓋特自媒 自由發聲 多元包容  開啓Hcoin Hpay  喜聯儲 幣統天下 藏富於民
+最后，寻问农场有何安全方式能将钱汇到喜帐户内，然后才能买喜币。
 
-家有好女子 豈止是旺三代  好母親福祉 不只是惠億族  ＂弄死這幫鱉孫兒！＂
+每一步都要小心谨慎，才不会被中共伤害。
 
-女子本弱 為母則強  ＂我家我說了算！＂ 女性戰友 全家滅共  水流實處 河居人家
+文贵先生郑重向墙内战友提供三项保证：第一. 任何人拿不走你的个人信息；第二. 无论中共怎样做，拿不走你的喜币；第三. 买币以后，如果你在喜币赔钱，郭先生负责。
 
-隨風隨季 氣行空中  冰川南北 溫定乾坤  上善若水 至善母性  同框同心  娓娓道來
+喜支付即将上线，意味着喜币将成为可以自由流通购物的工具，这是喜币开始要发挥其价值的起点，也是投资机构会积极进场的时刻。
 
-珍惜  同鄉同音 了卻宿願 勇氣 ·····
+喜币的独特优势，加上战友们齐心锁币的行动，将使其在竞争激烈的加密货币市场独领风骚，涨势不可限量。
 
-**GTV链接:**[https://gtv.org/broadcast/watch/61dd6ba0a6dfdd6031526aa2](https://gtv.org/broadcast/watch/61dd6ba0a6dfdd6031526aa2)
+参考链接：[2022年1月9日 文贵大直播](https://gtv.org/video/id=61dade8c4658a73785d25465)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
+
+总编：文特
+编辑：Kathy文艺
+校正/发稿：谐趣园
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+
 
  
 
