--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,32 +1,84 @@
 ---
-title: 有声&#124;“子有所教 老有所养” 是新中国联邦的基本愿景
+title: 2021年1月10日（新西兰时间） 【玫瑰看新闻】每日快讯
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1847664/)
+`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/1847754/)
 
-配音：香草山健身部 – 玫瑰园
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-在1月9日的大直播中，郭文贵先生讲述了灭共以后，中国社会一定要恢复 “少有所依，老有所养“的社会。
+1. 布林肯称化解乌克兰局势关键在俄罗斯
 
-郭先生说，中共国的养老金问题是一个伪命题。传宗接代，是人类的基本权利。即使在春秋战国时期，税赋很重，最首要解决的，也是“少有所依，老有所养”，这是中华民族几千年的文明传承。但在中共国，老年人既死不起，也活不起。养老金本就属于民众，却被共产党利用，成为统治的工具。
+在俄罗斯与西方国家日内瓦会谈前夕，美国国务卿布林肯今天表示，俄国必须在对话与冲突之间作抉择。
 
-郭先生明确表示，新中国联邦灭共后，第一，要恢复正常的家庭伦理、社会道德；第二，教育是最紧迫最重要的事，也是法治、信仰、良知的基石；第三，公民到50岁以后，由国家负责养老，衣食住行、治病送终，全免费。建立喜币喜联储，就是在未来，优先让孩子和老人受惠。老年人可以自己选择养老的方式，并且鼓励老年人工作和发挥余热。
+据报道，布林肯表示：藉由对话与外交斡旋的方式，可化解若干歧见及避免冲突，另个方式就是对抗，若俄罗斯再次入侵乌克兰，将面临严重后果。
 
-社会形成敬老爱老的风气，让老人更有安全感，活得更有尊严。这是新中国联邦的基本愿景。
+俄罗斯官员将在本周藉由会谈展开外交斡旋，包括与北大西洋公约组织（NATO）及欧洲安全暨合作组织（OSCE）会商，不过莫斯科方面无意在上述会谈做出任何让步。
 
-文字版原文：[“子有所教 老有所养” 是新中国联邦的基本愿景](https://gnews.org/zh-hans/1843832/)
+2.驻日美军实行为期14天的外出限制
 
-音频处理：喜山必胜Maverick
-发稿：呼吸的雾霾（文小呼吸）
+据日本经济新闻网报道，日美两国政府1月9日发布消息称，鉴于驻日美军感染新冠的情况迅速扩大，双方已达成协议。从10日开始采取外出限制措施，为期14天，对象为全日本的所有驻日美军人员。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E6%9C%88%E5%B0%8F%E5%9B%BE-1.jpg)
+日美两国政府就驻日美军疫情应对措施发表了联合声明。包括驻日美军基地内的区域，在自家住宅以外的地方必须佩戴口罩。驻日美军及其家属等相关人员的规模据估计达到10万人。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
+冲绳县和山口县等美军基地所在地区的疫情扩大。截至1月7日，全日本的驻日美军设施区域的感染人数已超过2000人。
+
+日本政府在7日举行的日美外交和防卫长官磋商会议上，要求美方彻底采取限制外出等对策。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image003.jpg)
+3.哈萨克斯坦骚乱造成的损失总额超过2.15亿美元
+
+据俄罗斯卫星通讯社1月10日报道，哈萨克斯坦全国企业家商会（Atameken）发布消息称，截至1月10日早上，哈萨克斯坦骚乱造成的损失总额超过2.15亿美元。
+
+该消息称：“截至1月10日当地时间9时，据粗略估计损失总额超过937亿坚戈，其中阿拉木图为922亿坚戈）。”
+
+截至1月9日早上，该国骚乱造成的损失总额达2.12亿美元。
+
+据联合国数据，在哈萨克斯坦的抗议活动期间，近1000人受伤。据该国内务部确认的数据，16人死亡。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image005.jpg)
+4.网球明星诺瓦克·德约科维奇赢得关于澳大利亚签证被取消的诉讼
+
+周一，塞尔维亚网球明星诺瓦克·德约科维奇赢得了留在澳大利亚的上诉，此前该国当局因其Covid-19疫苗接种状态而禁止这位网球明星入境。
+
+周一，诺瓦克·德约科维奇被法院宣布胜诉，法官命令政府释放他，并恢复因德约科维奇被取消的签证。
+
+这位世界顶级男子网球运动员为了赢得破纪录的第21 个大满贯冠军而来到澳洲。德约科维奇带着签证和疫苗豁免抵达计划参加1 月17 日开始的比赛，但边境官员在总理斯科特莫里森的支持下取消了签证。当局表示，德约科维奇没有资格豁免进入该国，坚称每个人都必须完全接种疫苗。随着Omicron 变种在澳大利亚和世界其他地区将Covid 病例数推向新的高度。
+
+这场冲突在澳大利亚新的选举年引发了关于疫苗政治的一轮国际辩论。
+
+虽然周一的裁决似乎为他的比赛打开了大门，但政府警告说，即使在法院作出裁决后，也可能会第二次取消他的签证。
+
+德约科维奇曾多次表示反对疫苗授权，称疫苗接种是私人和个人的决定。在周六的法庭文件中，德约科维奇的律师说，这位网球明星在12 月中旬的冠状病毒检测呈阳性，澳大利亚网球官员基于这些理由授予他疫苗接种豁免。周一在法庭上，律师们辩称，澳大利亚政府因疫苗要求而取消了德约科维奇的签证是错误的。
+
+法官指出，德约科维奇的签证申请包括医生的医疗豁免，并且，得到了包括墨尔本在内的维多利亚州政府召集的一个独立小组的支持。政府则在法庭文件中辩称，没有任何游客在抵达时保证准入，并且所有人都需要在边境接受进一步检查，并补充说，过去的Covid-19 感染不再是推迟对该病毒进行免疫接种的正当理由。
+
+围绕德约科维奇展开的戏剧震撼了网球界，并在塞尔维亚和澳大利亚之间制造了紧张关系。它也已成为世界各地反对疫苗强制要求的引爆点。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image007.jpg)
+5.美国平均每天新增70万例新冠肺炎病例
+
+据《今日美国》消息，根据约翰·霍普金斯大学数据的分析显示，美国目前平均每天新增中共病毒病例超过70万例。
+
+在截至周六的一星期内，美国报告了约491万例病例。这比2021年4月、5月、6月和7月的总和还要多。以最新的速度，每秒钟有8个美国人检测出阳性。在过去5天里，每一天的新增病例数都排在整个大流行期间的前5位。
+
+周六发布的一份报告显示，约有13.8万名COVID-19患者住院，比前一周增加了32%。
+
+
+
+**推出问题，敲出真相，爆料在路上！**
+
+**请关注和订阅我们的以下账号：**
+
+**新西兰伊甸农场盖特**：https://gettr.com/user/himalayanz
+
+**【玫瑰看新闻】盖特**：https://gettr.com/user/rosenews
+
+**玫瑰看新闻YouTube账号**：
+
+**玫瑰看新闻**
+
+**黑森林的故事**
+
+**Rose news**
+
+**【玫瑰看新闻】推特账号**：
+
+**Rose News (@RoseNews4)**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
