--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,30 +1,32 @@
 ---
-title: 美众议院又新增两名感染新冠病毒的立法议员
+title: 有声&#124;“子有所教 老有所养” 是新中国联邦的基本愿景
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1847552/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1847664/)
 
-翻译：Steven Hu
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-64.png)
-图片来源：谷歌图片
+配音：香草山健身部 – 玫瑰园
+![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+在1月9日的大直播中，郭文贵先生讲述了灭共以后，中国社会一定要恢复 “少有所依，老有所养“的社会。
 
-1 月 10 日合众社：两名分别来自弗吉尼亚州的 本.克莱恩和纽约州的约翰.凯特科的众议员周一分别宣布，他们的新冠病毒检测呈阳性。这两位立法者都在推特上公布了这一重大消息。
+郭先生说，中共国的养老金问题是一个伪命题。传宗接代，是人类的基本权利。即使在春秋战国时期，税赋很重，最首要解决的，也是“少有所依，老有所养”，这是中华民族几千年的文明传承。但在中共国，老年人既死不起，也活不起。养老金本就属于民众，却被共产党利用，成为统治的工具。
 
-“我周六进行了新冠病毒测试，结果呈阳性，”克莱恩说。  “我已经接种了疫苗，在咨询了我的医生后，我正在采取一切必要的预防措施，在弗吉尼亚的家中进行隔离。”
+郭先生明确表示，新中国联邦灭共后，第一，要恢复正常的家庭伦理、社会道德；第二，教育是最紧迫最重要的事，也是法治、信仰、良知的基石；第三，公民到50岁以后，由国家负责养老，衣食住行、治病送终，全免费。建立喜币喜联储，就是在未来，优先让孩子和老人受惠。老年人可以自己选择养老的方式，并且鼓励老年人工作和发挥余热。
 
-凯特科说，他周日的检测结果呈阳性，而且他已经完全接种了疫苗并注射了加强针。
+社会形成敬老爱老的风气，让老人更有安全感，活得更有尊严。这是新中国联邦的基本愿景。
 
-他说：“本周我将在华盛顿通过代理人投票，并会在康复后驻家工作。”  “我的选民服务团队仍然运作如常并作好随时服务的准备。”
+文字版原文：[“子有所教 老有所养” 是新中国联邦的基本愿景](https://gnews.org/zh-hans/1843832/)
 
-他们的公布是在其他几位代表检测呈阳性之后发布的。
+音频处理：喜山必胜Maverick
+发稿：呼吸的雾霾（文小呼吸）
 
-伊利诺伊州民主党众议员 辛. 卡斯坦和加利福尼亚州共和党众议员 扬.金在周六宣布了他们的检测呈阳性的消息，纽约州民主党众议员 阿历克桑德莉娅.奥卡西-戈茨周日表示，她的检测结果呈阳性。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E6%9C%88%E5%B0%8F%E5%9B%BE-1.jpg)
 
-美国正在竭尽全力应对去年在南非首次发现的具有传染性的奥米克绒变种病例激剧增长的问题。
-
-根据约翰霍普金斯大学冠状病毒资源中心的数据，过去 28 天美国的病例数占整个大流行期间全国所有病例的 17%。
-
-原文链接：[https://www.upi.com/Top\_News/US/2022/01/10/representative-test-positive-COVID19/6751641837614/](https://www.upi.com/Top_News/US/2022/01/10/representative-test-positive-COVID19/6751641837614/)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
