--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,39 +1,31 @@
 ---
-title: 2022.1.10全球反疫苗抗议游行
+title: 天津累计确诊病例97例
 ---
-`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/1847817/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1847893/)
 
-🔥🔥全球抗议者行动-2022/01/10
+#### 撰稿：日本东京方舟农场  幽蘭自得
 
-⚠️我们不反疫苗，只针对假疫苗
+![](https://assets.gnews.org/wp-content/uploads/2022/01/45C175A4-CFB5-42D2-A092-39236A63A866.jpeg)（图片来自网络）
 
-⚠️我们不反科学，只针对反人类
+1月11日，中（共）国天津市卫健委在疫情防控新闻发布会上表示，自8日出现COVID-19（中共病毒）疫情，截至11日共报告阳性新冠肺炎病毒感染者97例，其中本土新冠肺炎确诊病例49例，本土新冠病毒无症状感染者15例。
 
-⚠️covid-19=新冠病毒=中共病毒
+据了解，天津这一轮疫情感染的是Omicron病毒变异株，因其传播速度快、隐匿性强的特点，天津当局决定9日展开全员核酸筛查。天津共有约1400万人口，截至10日下午3时，全市采样962万4938人，完成检测342万7807人。累计判定追踪密切接触者1152人、次级密切接触者685人，累计隔离管理约7.5万人。
+
+由于天津紧邻北京，距离冬奥会主赛场张家口也不远，为阻断奥密克戎变异毒株的扩散蔓延和疫情外溢风险，天津已于1月9日晚发布通告，重点加强进京通道管控，组织铁路、客运站及高速路口设立卡口或专用通道，对于离津进京人员要核验48小时内核酸检测阴性证明和健康码绿码。同时严格密切接触者及次级密切接触者等重点涉疫人员排查、重点区域管控及离校师生管控。
+
+*参考链接：*
+
+1. [*http://tj.sina.com.cn/news/2022-01-11/detail-ikyamrmz4537188.shtml*](http://tj.sina.com.cn/news/2022-01-11/detail-ikyamrmz4537188.shtml)
+2. [*http://webcache.googleusercontent.com/search?q=cache:O9OXd9YA6Y4J:wsjk.tj.gov.cn/ZTZL1/ZTZL750/YQFKZL9424/FKDT1207/202201/t20220110\_5775661.html+&cd=7&hl=zh-TW&ct=clnk&gl=no*](https://webcache.googleusercontent.com/search?q=cache:O9OXd9YA6Y4J:wsjk.tj.gov.cn/ZTZL1/ZTZL750/YQFKZL9424/FKDT1207/202201/t20220110_5775661.html+&amp;cd=7&amp;hl=zh-TW&amp;ct=clnk&amp;gl=no)
 
 
+* * *
 
+*素材采编：幽蘭自得*
 
+*编辑：文顺*
 
-**推出问题，敲出真相，爆料在路上！**
-
-**请关注和订阅我们的以下账号：**
-
-**新西兰伊甸农场盖特**：https://gettr.com/user/himalayanz
-
-**【玫瑰看新闻】盖特**：https://gettr.com/user/rosenews
-
-**玫瑰看新闻YouTube账号**：
-
-**玫瑰看新闻**
-
-**黑森林的故事**
-
-**Rose news**
-
-**【玫瑰看新闻】推特账号**：
-
-**Rose News (@RoseNews4)**
+*发布：miumiu*
 
  
 
