--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,44 +1,19 @@
 ---
-title: 文贵先生谈喜币价值 寄语墙内战友
+title: 是时候站起来夺回我们的医疗自由了
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1847804/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1847880/)
 
-作者：纽约香草山 医疗部 云豹
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-在2022年1月9日大直播中，郭先生主动聊起喜币，尤其对墙内战友衷心叮嘱，保证其投资信息与回报的安全。
+**作者：日本东京方舟农场 JIHO**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide1-7.jpeg)
+善药和恶药是有区别的，好的科学和邪恶的科学是有区别的。现在困扰世界的邪恶科学带来了歧视，隔离，让公民反对公民，让我们质疑自己的动机，让我们相信我们迷失了…
 
-首先，自身的安全。不要因急于买喜币，不考虑风险去银行汇钱，结果可能被举报抓捕询问。
+* * *
 
-其次，先与所在农场联系，做好KYC，将帐户准备好。
+*素材采编：JIHO*
 
-最后，寻问农场有何安全方式能将钱汇到喜帐户内，然后才能买喜币。
+*发布：Ranting*
 
-每一步都要小心谨慎，才不会被中共伤害。
-
-文贵先生郑重向墙内战友提供三项保证：第一. 任何人拿不走你的个人信息；第二. 无论中共怎样做，拿不走你的喜币；第三. 买币以后，如果你在喜币赔钱，郭先生负责。
-
-喜支付即将上线，意味着喜币将成为可以自由流通购物的工具，这是喜币开始要发挥其价值的起点，也是投资机构会积极进场的时刻。
-
-喜币的独特优势，加上战友们齐心锁币的行动，将使其在竞争激烈的加密货币市场独领风骚，涨势不可限量。
-
-参考链接：[2022年1月9日 文贵大直播](https://gtv.org/video/id=61dade8c4658a73785d25465)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
-
-总编：文特
-编辑：Kathy文艺
-校正/发稿：谐趣园
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-
+*封面制作：S*
 
  
 
