--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,26 +1,29 @@
 ---
-title: 墙内老百姓为何如此之愚昧，如此之悲惨
+title: 王毅新年窜访五国 必有所图
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1847794/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1847854/)
 
-作者：卢卡斯
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片144.png)图片来源：GNEWS
-从历史上看，东西方的发展沿着两个相反的方向发展，西方朝着自由民主法治人权的方向走，中国朝着专制独裁愚昧落后的方向走！
+作者：纽约香草山教育部 – 风雨同舟
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2022年新年伊始，中共国外交部长王毅于1月4日-7日访问非洲三国：厄立特里亚、肯尼亚、科摩罗；然后再访问马尔代夫和斯里兰卡。王毅拒绝承认中共在非洲一带一路项目制造的债务陷阱，并以强硬指责来回应西方的批评。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/4-12.jpg)
+分析人士指出，王毅的此行真实目的暂时不明确。但是联想到2019年6月18日，王毅警告美国不要再逼中共，否则中共会打开潘多拉的盒子，而后全世界中共病毒疫情爆发。2021年7月26日王毅会见塔利班领导人后，塔利班在阿富汗迅速军事扩张，推翻阿富汗政府，驱离美军，并造成现在的阿富汗人道灾难。在近日，郭先生爆料，王毅在访问哈萨克斯坦后，哈萨克斯坦就爆发了内乱。在中共与西方博弈的关键时刻，王毅出访非洲，必有所图。
 
-共产主义魔教诞生在西方，但是为什么在东方的俄国和中国发展壮大，是因为20世纪初的俄国和中国，国民思想愚昧落后，容易被共产邪教所迷惑！中国老百姓为何最愚昧最惨，是因为这块土地上的人们不仅愚昧，而且基本上丧失了血性丧失了勇气正义，人们变成猪羊，根本原因是受2000多年来的儒教洗脑，专制独裁的残酷血腥的统治，特别是蒙元满清几乎把有血气有反抗基因的汉人杀戮殆尽，剩下的几乎都是顺民的基因，满清末年的照片透露出当时的国民的愚昧、迷茫、麻木不仁。
+参考链接：[2022年第一场，中国旋风式外交开始了！](https://www.163.com/dy/article/GTB859UH052182V3.html)
 
-到了红朝，邪恶的共匪把商鞅五术发展到了极致，人们更加愚昧，而且极其恐惧史上最残酷血腥的共产党。被深度洗脑的老百姓对自诩比秦始皇还秦始皇的毛贼东山呼万岁万岁万万岁，可见中国人被愚昧洗脑之深。毛之后的每一代共匪老杂毛继续洗脑中国老百姓，毛死后快半世纪的今天，通讯互联网这么发达，但是人们继续愚昧，是由于共匪封锁信息之高超之严厉，手段之严厉！CCP魔鬼极其狡猾，不但完全愚昧了中国人，而且欺骗了自称有独立思想的信息开放的民主自由的西方人。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-01-at-10.17.55-PM.png)
 
-一直到文贵先生17年1月出来爆料，成为天下第一个揭开CCP魔鬼的画皮的人，揭露了CCP数十年来精心准备统治全球的野心，唤醒了无数中国人和西方人少数真正有良知正义有智慧的人们。今天CCP继续放毒继续残害全球人们，魔鬼是不会退缩的，直到它被消灭为止。
+总编：Zion文恩
+编辑：Ivy001
+校正/发稿：Fei797
 
-文贵先生刚出来爆料时说，请给我三年时间，我将唤醒国人，认清共产党之魔鬼的血腥残暴统治奴役屠杀中国人之本质；今天，爆料革命还有两周时间就是五年了，仍然还有那么多的国人沉睡不醒，可见国人被共产党愚昧洗脑之深之彻底。文贵先生屡屡痛心疾首的是，太多中国人太可怜可悲可恨，因为他们唤不醒，跟着共产党，跑步进入火葬场！
-
-最近文贵先生揭露了CCP老杂毛最迷信，他们信仰的是魔鬼，却霸占昆仑山祭奠昆仑神，隔断了中国老百姓与神的关系，让他们成为没有信仰的猪羊，只信魔鬼共产党！远离神上千年的中国老百姓，真的是受到了神咒，付出了最惨重的代价！文贵先生最热爱我们受尽共产党的苦难墙内同胞，战友们也是如此！我们要学习七哥天天祈福，天天努力做事，争取早日消灭共产党，拯救我们更多的同胞！
-
-编辑/发布：LILY
-
-20220111
-![](https://assets.gnews.org/wp-content/uploads/2021/11/農場文宣-3.jpg)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
